@@ -24,25 +24,26 @@
  */
 package com.oracle.svm.core.classinitialization;
 
-// Checkstyle: stop
-
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
 
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
+import org.graalvm.nativeimage.CurrentIsolate;
+import org.graalvm.nativeimage.IsolateThread;
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.Platforms;
 import org.graalvm.nativeimage.c.function.CFunctionPointer;
+import org.graalvm.word.WordFactory;
 
 import com.oracle.svm.core.FunctionPointerHolder;
-import com.oracle.svm.core.annotate.InvokeJavaFunctionPointer;
+import com.oracle.svm.core.c.InvokeJavaFunctionPointer;
 import com.oracle.svm.core.hub.DynamicHub;
 import com.oracle.svm.core.jdk.InternalVMMethod;
 import com.oracle.svm.core.snippets.SubstrateForeignCallTarget;
+import com.oracle.svm.core.thread.JavaThreads;
+import com.oracle.svm.core.thread.VirtualThreads;
 import com.oracle.svm.core.util.VMError;
 
-import sun.misc.Unsafe;
-// Checkstyle: resume
+import jdk.internal.misc.Unsafe;
 
 /**
  * Information about the runtime class initialization state of a {@link DynamicHub class}, and
@@ -55,8 +56,6 @@ import sun.misc.Unsafe;
  */
 @InternalVMMethod
 public final class ClassInitializationInfo {
-
-    private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
 
     /**
      * Singleton for classes that are already initialized during image building and do not need
@@ -103,9 +102,17 @@ public final class ClassInitializationInfo {
      */
     private InitState initState;
     /**
-     * The thread that is currently initializing the class.
+     * The thread that is currently initializing the class. We use the platform thread instead of a
+     * potential virtual thread because initializers like that of {@code sun.nio.ch.Poller} can
+     * switch to the carrier thread and encounter the class that is being initialized again and
+     * would wait for its initialization in the virtual thread to complete and therefore deadlock.
+     *
+     * We also pin the virtual thread because it must not continue initialization on a different
+     * platform thread, and also because if the platform thread switches to a different virtual
+     * thread which encounters the class being initialized, it would wrongly be considered reentrant
+     * initialization and enable use of the incompletely initialized class.
      */
-    private Thread initThread;
+    private IsolateThread initThread;
 
     /**
      * The lock held during initialization of the class. Allocated during image building, otherwise
@@ -162,8 +169,8 @@ public final class ClassInitializationInfo {
         return initState == InitState.InitializationError;
     }
 
-    private boolean isReentrantInitialization(Thread thread) {
-        return thread == initThread;
+    private boolean isReentrantInitialization(IsolateThread thread) {
+        return thread.equal(initThread);
     }
 
     /**
@@ -175,7 +182,7 @@ public final class ClassInitializationInfo {
      */
     @SubstrateForeignCallTarget(stubCallingConvention = true)
     private static void initialize(ClassInitializationInfo info, DynamicHub hub) {
-        Thread self = Thread.currentThread();
+        IsolateThread self = CurrentIsolate.getCurrentThread();
 
         /*
          * Step 1: Synchronize on the initialization lock, LC, for C. This involves waiting until
@@ -238,6 +245,22 @@ public final class ClassInitializationInfo {
             info.initLock.unlock();
         }
 
+        boolean pinned = false;
+        if (VirtualThreads.isSupported() && JavaThreads.isCurrentThreadVirtual()) {
+            // See comment on field `initThread`
+            VirtualThreads.singleton().pinCurrent();
+            pinned = true;
+        }
+        try {
+            doInitialize(info, hub);
+        } finally {
+            if (pinned) {
+                VirtualThreads.singleton().unpinCurrent();
+            }
+        }
+    }
+
+    private static void doInitialize(ClassInitializationInfo info, DynamicHub hub) {
         /*
          * Step 7: Next, if C is a class rather than an interface, initialize its super class and
          * super interfaces.
@@ -345,9 +368,9 @@ public final class ClassInitializationInfo {
         initLock.lock();
         try {
             this.initState = state;
-            this.initThread = null;
+            this.initThread = WordFactory.nullPointer();
             /* Make sure previous stores are all done, notably the initState. */
-            UNSAFE.storeFence();
+            Unsafe.getUnsafe().storeFence();
 
             if (initCondition != null) {
                 initCondition.signalAll();
