@@ -26,10 +26,9 @@ package com.oracle.svm.core.graal.snippets;
 
 import static com.oracle.svm.core.SubstrateOptions.MultiThreaded;
 import static com.oracle.svm.core.SubstrateOptions.SpawnIsolates;
-import static com.oracle.svm.core.SubstrateOptions.UseDedicatedVMOperationThread;
-import static com.oracle.svm.core.annotate.RestrictHeapAccess.Access.NO_ALLOCATION;
 import static com.oracle.svm.core.graal.nodes.WriteCurrentVMThreadNode.writeCurrentVMThread;
 import static com.oracle.svm.core.graal.nodes.WriteHeapBaseNode.writeCurrentVMHeapBase;
+import static com.oracle.svm.core.heap.RestrictHeapAccess.Access.NO_ALLOCATION;
 import static com.oracle.svm.core.util.VMError.shouldNotReachHere;
 
 import java.util.Map;
@@ -51,7 +50,6 @@ import org.graalvm.compiler.replacements.SnippetTemplate;
 import org.graalvm.compiler.replacements.SnippetTemplate.Arguments;
 import org.graalvm.compiler.replacements.SnippetTemplate.SnippetInfo;
 import org.graalvm.compiler.replacements.Snippets;
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
 import org.graalvm.compiler.word.Word;
 import org.graalvm.nativeimage.CurrentIsolate;
 import org.graalvm.nativeimage.ImageSingletons;
@@ -66,15 +64,16 @@ import org.graalvm.word.LocationIdentity;
 import org.graalvm.word.PointerBase;
 import org.graalvm.word.WordFactory;
 
+import com.oracle.svm.core.CPUFeatureAccess;
 import com.oracle.svm.core.IsolateArgumentParser;
 import com.oracle.svm.core.IsolateListenerSupport;
 import com.oracle.svm.core.Isolates;
 import com.oracle.svm.core.JavaMainWrapper.JavaMainSupport;
 import com.oracle.svm.core.RuntimeAssertionsSupport;
 import com.oracle.svm.core.SubstrateDiagnostics;
+import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.annotate.RestrictHeapAccess;
-import com.oracle.svm.core.annotate.Uninterruptible;
+import com.oracle.svm.core.Uninterruptible;
 import com.oracle.svm.core.c.CGlobalData;
 import com.oracle.svm.core.c.CGlobalDataFactory;
 import com.oracle.svm.core.c.function.CEntryPointActions;
@@ -88,26 +87,25 @@ import com.oracle.svm.core.graal.nodes.CEntryPointEnterNode;
 import com.oracle.svm.core.graal.nodes.CEntryPointLeaveNode;
 import com.oracle.svm.core.graal.nodes.CEntryPointUtilityNode;
 import com.oracle.svm.core.heap.ReferenceHandler;
-import com.oracle.svm.core.heap.ReferenceHandlerThreadSupport;
+import com.oracle.svm.core.heap.ReferenceHandlerThread;
+import com.oracle.svm.core.heap.RestrictHeapAccess;
 import com.oracle.svm.core.jdk.PlatformNativeLibrarySupport;
 import com.oracle.svm.core.jdk.RuntimeSupport;
 import com.oracle.svm.core.log.Log;
 import com.oracle.svm.core.option.RuntimeOptionParser;
-import com.oracle.svm.core.os.MemoryProtectionKeyProvider;
+import com.oracle.svm.core.os.MemoryProtectionProvider;
 import com.oracle.svm.core.snippets.SnippetRuntime;
 import com.oracle.svm.core.snippets.SnippetRuntime.SubstrateForeignCallDescriptor;
 import com.oracle.svm.core.snippets.SubstrateForeignCallTarget;
 import com.oracle.svm.core.stack.StackOverflowCheck;
-import com.oracle.svm.core.thread.JavaThreads;
+import com.oracle.svm.core.thread.PlatformThreads;
 import com.oracle.svm.core.thread.Safepoint;
 import com.oracle.svm.core.thread.VMOperationControl;
 import com.oracle.svm.core.thread.VMThreads;
 import com.oracle.svm.core.thread.VMThreads.SafepointBehavior;
 import com.oracle.svm.core.util.VMError;
 
-// Checkstyle: stop
-import sun.misc.Unsafe;
-// Checkstyle: resume
+import jdk.internal.misc.Unsafe;
 
 /**
  * Snippets for calling from C to Java. See {@link CEntryPointActions} and
@@ -124,7 +122,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     public static final SubstrateForeignCallDescriptor ATTACH_THREAD = SnippetRuntime.findForeignCall(CEntryPointSnippets.class, "attachThread", false, LocationIdentity.any());
     public static final SubstrateForeignCallDescriptor ENSURE_JAVA_THREAD = SnippetRuntime.findForeignCall(CEntryPointSnippets.class, "ensureJavaThread", false, LocationIdentity.any());
 
-    public static final SubstrateForeignCallDescriptor ENTER_ISOLATE_MT = SnippetRuntime.findForeignCall(CEntryPointSnippets.class, "enterIsolateMT", false, LocationIdentity.any());
+    public static final SubstrateForeignCallDescriptor ENTER_BY_ISOLATE_MT = SnippetRuntime.findForeignCall(CEntryPointSnippets.class, "enterByIsolateMT", false, LocationIdentity.any());
 
     public static final SubstrateForeignCallDescriptor DETACH_THREAD_MT = SnippetRuntime.findForeignCall(CEntryPointSnippets.class, "detachThreadMT", false, LocationIdentity.any());
 
@@ -134,14 +132,15 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     public static final SubstrateForeignCallDescriptor FAIL_FATALLY = SnippetRuntime.findForeignCall(CEntryPointSnippets.class, "failFatally", false, LocationIdentity.any());
     public static final SubstrateForeignCallDescriptor VERIFY_ISOLATE_THREAD = SnippetRuntime.findForeignCall(CEntryPointSnippets.class, "verifyIsolateThread", false, LocationIdentity.any());
 
-    public static final SubstrateForeignCallDescriptor[] FOREIGN_CALLS = {CREATE_ISOLATE, INITIALIZE_ISOLATE, ATTACH_THREAD, ENSURE_JAVA_THREAD, ENTER_ISOLATE_MT,
+    public static final SubstrateForeignCallDescriptor[] FOREIGN_CALLS = {CREATE_ISOLATE, INITIALIZE_ISOLATE, ATTACH_THREAD, ENSURE_JAVA_THREAD, ENTER_BY_ISOLATE_MT,
                     DETACH_THREAD_MT, REPORT_EXCEPTION, TEAR_DOWN_ISOLATE, IS_ATTACHED_MT, FAIL_FATALLY, VERIFY_ISOLATE_THREAD};
 
     @NodeIntrinsic(value = ForeignCallNode.class)
     public static native int runtimeCall(@ConstantNodeParameter ForeignCallDescriptor descriptor, CEntryPointCreateIsolateParameters parameters, int vmThreadSize);
 
     @NodeIntrinsic(value = ForeignCallNode.class)
-    public static native int runtimeCall(@ConstantNodeParameter ForeignCallDescriptor descriptor, Isolate isolate, boolean inCrashHandler, int vmThreadSize);
+    public static native int runtimeCall(@ConstantNodeParameter ForeignCallDescriptor descriptor, Isolate isolate,
+                    boolean startedByIsolate, boolean inCrashHandler, int vmThreadSize, boolean ensuringJavaThread);
 
     @NodeIntrinsic(value = ForeignCallNode.class)
     public static native int runtimeCall(@ConstantNodeParameter ForeignCallDescriptor descriptor, Isolate isolate);
@@ -173,15 +172,15 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     public static void setHeapBase(PointerBase heapBase) {
         if (hasHeapBase()) {
             writeCurrentVMHeapBase(heapBase);
-            if (MemoryProtectionKeyProvider.isAvailable()) {
-                MemoryProtectionKeyProvider.singleton().unlockCurrentIsolate();
+            if (MemoryProtectionProvider.isAvailable()) {
+                MemoryProtectionProvider.singleton().unlockCurrentIsolate();
             }
         } else {
             writeCurrentVMHeapBase(WordFactory.nullPointer());
         }
     }
 
-    @Snippet
+    @Snippet(allowMissingProbabilities = true)
     public static int createIsolateSnippet(CEntryPointCreateIsolateParameters parameters, @ConstantParameter int vmThreadSize) {
         if (MultiThreaded.getValue()) {
             writeCurrentVMThread(WordFactory.nullPointer());
@@ -192,7 +191,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
             return result;
         }
         if (MultiThreaded.getValue()) {
-            Safepoint.transitionNativeToJava();
+            Safepoint.transitionNativeToJava(false);
         }
 
         result = runtimeCallInitializeIsolate(INITIALIZE_ISOLATE, parameters);
@@ -202,6 +201,10 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     @Uninterruptible(reason = "Thread state not yet set up.")
     @SubstrateForeignCallTarget(stubCallingConvention = false)
     private static int createIsolate(CEntryPointCreateIsolateParameters parameters, int vmThreadSize) {
+        CPUFeatureAccess cpuFeatureAccess = ImageSingletons.lookup(CPUFeatureAccess.class);
+        if (cpuFeatureAccess.verifyHostSupportsArchitectureEarly() != 0) {
+            return CEntryPointErrors.CPU_FEATURE_CHECK_FAILED;
+        }
         CLongPointer parsedArgs = StackValue.get(IsolateArgumentParser.getStructSize());
         IsolateArgumentParser.parse(parameters, parsedArgs);
 
@@ -223,12 +226,12 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
                 return CEntryPointErrors.THREADING_INITIALIZATION_FAILED;
             }
         }
-        error = attachThread(isolate.read(), false, vmThreadSize);
+        error = attachThread(isolate.read(), false, false, vmThreadSize, true);
         if (error != CEntryPointErrors.NO_ERROR) {
             return error;
         }
 
-        JavaThreads.singleton().initializeIsolate();
+        PlatformThreads.singleton().initializeIsolate();
 
         return CEntryPointErrors.NO_ERROR;
     }
@@ -258,28 +261,26 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         boolean firstIsolate = false;
 
         final long initStateAddr = FIRST_ISOLATE_INIT_STATE.get().rawValue();
-        final Unsafe unsafe = GraalUnsafeAccess.getUnsafe();
-        int state = unsafe.getInt(initStateAddr);
+        int state = Unsafe.getUnsafe().getInt(initStateAddr);
         if (state != FirstIsolateInitStates.SUCCESSFUL) {
-            firstIsolate = unsafe.compareAndSwapInt(null, initStateAddr, FirstIsolateInitStates.UNINITIALIZED, FirstIsolateInitStates.IN_PROGRESS);
-            if (firstIsolate) {
-                PlatformNativeLibrarySupport.singleton().setIsFirstIsolate();
-            } else {
+            firstIsolate = Unsafe.getUnsafe().compareAndSetInt(null, initStateAddr, FirstIsolateInitStates.UNINITIALIZED, FirstIsolateInitStates.IN_PROGRESS);
+            if (!firstIsolate) {
                 while (state == FirstIsolateInitStates.IN_PROGRESS) { // spin-wait for first isolate
                     PauseNode.pause();
-                    state = unsafe.getIntVolatile(null, initStateAddr);
+                    state = Unsafe.getUnsafe().getIntVolatile(null, initStateAddr);
                 }
                 if (state == FirstIsolateInitStates.FAILED) {
                     return CEntryPointErrors.ISOLATE_INITIALIZATION_FAILED;
                 }
             }
         }
+        Isolates.setCurrentIsFirstIsolate(firstIsolate);
 
         /*
          * The VM operation thread must be started early as no VM operations can be scheduled before
          * this thread is fully started.
          */
-        if (UseDedicatedVMOperationThread.getValue()) {
+        if (VMOperationControl.useDedicatedVMOperationThread()) {
             VMOperationControl.startVMOperationThread();
         }
 
@@ -289,7 +290,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
          * result in deadlocks if ReferenceInternals.waitForReferenceProcessing() is called.
          */
         if (ReferenceHandler.useDedicatedThread()) {
-            ImageSingletons.lookup(ReferenceHandlerThreadSupport.class).getThread().start();
+            ReferenceHandlerThread.start();
         }
 
         /*
@@ -298,8 +299,26 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
          */
 
         if (parameters.isNonNull() && parameters.version() >= 3 && parameters.getArgv().isNonNull()) {
-            String[] args = SubstrateUtil.getArgs(parameters.getArgc(), parameters.getArgv());
-            args = RuntimeOptionParser.parseAndConsumeAllOptions(args, false);
+            boolean exitWhenArgumentParsingFails = true;
+            boolean ignoreUnrecognized = false;
+            if (parameters.version() >= 4) {
+                ignoreUnrecognized = parameters.getIgnoreUnrecognizedArguments();
+                exitWhenArgumentParsingFails = parameters.getExitWhenArgumentParsingFails();
+            }
+
+            String[] args = SubstrateUtil.convertCToJavaArgs(parameters.getArgc(), parameters.getArgv());
+            try {
+                args = RuntimeOptionParser.parseAndConsumeAllOptions(args, ignoreUnrecognized);
+            } catch (IllegalArgumentException e) {
+                if (exitWhenArgumentParsingFails) {
+                    Log.logStream().println("error: " + e.getMessage());
+                    System.exit(1);
+                } else {
+                    CEntryPointActions.leaveTearDownIsolate();
+                    return CEntryPointErrors.ARGUMENT_PARSING_FAILED;
+                }
+            }
+
             if (ImageSingletons.contains(JavaMainSupport.class)) {
                 ImageSingletons.lookup(JavaMainSupport.class).mainArgs = args;
             }
@@ -308,10 +327,11 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         boolean success = PlatformNativeLibrarySupport.singleton().initializeBuiltinLibraries();
         if (firstIsolate) { // let other isolates (if any) initialize now
             state = success ? FirstIsolateInitStates.SUCCESSFUL : FirstIsolateInitStates.FAILED;
-            unsafe.putIntVolatile(null, initStateAddr, state);
+            Unsafe.getUnsafe().putIntVolatile(null, initStateAddr, state);
         }
 
         if (!success) {
+            CEntryPointActions.leaveTearDownIsolate();
             return CEntryPointErrors.ISOLATE_INITIALIZATION_FAILED;
         }
 
@@ -324,29 +344,29 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         try {
             RuntimeSupport.executeInitializationHooks();
         } catch (Throwable t) {
-            // Checkstyle: stop (printStackTrace below is going to write to System.err too)
             System.err.println("Uncaught exception while running initialization hooks:");
-            // Checkstyle: resume
             t.printStackTrace();
+            CEntryPointActions.leaveTearDownIsolate();
             return CEntryPointErrors.ISOLATE_INITIALIZATION_FAILED;
         }
 
         return CEntryPointErrors.NO_ERROR;
     }
 
-    @Snippet
-    public static int attachThreadSnippet(Isolate isolate, boolean ensureJavaThread, boolean inCrashHandler, @ConstantParameter int vmThreadSize) {
+    @Snippet(allowMissingProbabilities = true)
+    public static int attachThreadSnippet(Isolate isolate, boolean startedByIsolate, boolean ensureJavaThread,
+                    boolean inCrashHandler, @ConstantParameter int vmThreadSize) {
         if (MultiThreaded.getValue()) {
             writeCurrentVMThread(WordFactory.nullPointer());
         }
 
-        int error = runtimeCall(ATTACH_THREAD, isolate, inCrashHandler, vmThreadSize);
+        int error = runtimeCall(ATTACH_THREAD, isolate, startedByIsolate, inCrashHandler, vmThreadSize, ensureJavaThread);
         if (error != CEntryPointErrors.NO_ERROR) {
             return error;
         }
 
         if (MultiThreaded.getValue() && !inCrashHandler) {
-            Safepoint.transitionNativeToJava();
+            Safepoint.transitionNativeToJava(false);
         }
         if (ensureJavaThread) {
             runtimeCallEnsureJavaThread(ENSURE_JAVA_THREAD);
@@ -356,10 +376,10 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
 
     @Uninterruptible(reason = "Thread state not yet set up.")
     @SubstrateForeignCallTarget(stubCallingConvention = false)
-    private static int attachThread(Isolate isolate, boolean inCrashHandler, int vmThreadSize) {
-        int sanityError = Isolates.checkSanity(isolate);
-        if (sanityError != CEntryPointErrors.NO_ERROR) {
-            return sanityError;
+    private static int attachThread(Isolate isolate, boolean startedByIsolate, boolean inCrashHandler, int vmThreadSize, boolean ensuringJavaThread) {
+        int error = Isolates.checkIsolate(isolate);
+        if (error != CEntryPointErrors.NO_ERROR) {
+            return error;
         }
         if (SpawnIsolates.getValue()) {
             setHeapBase(Isolates.getHeapBase(isolate));
@@ -370,12 +390,15 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
             }
             IsolateThread thread = VMThreads.singleton().findIsolateThreadForCurrentOSThread(inCrashHandler);
             if (thread.isNull()) { // not attached
-                int error = attachUnattachedThread(isolate, inCrashHandler, vmThreadSize);
+                error = attachUnattachedThread(isolate, startedByIsolate, inCrashHandler, vmThreadSize);
                 if (error != CEntryPointErrors.NO_ERROR) {
                     return error;
                 }
             } else {
                 writeCurrentVMThread(thread);
+                if (ensuringJavaThread && !PlatformThreads.isCurrentAssigned()) {
+                    throw VMError.shouldNotReachHere("thread was already attached but does not have a Thread object and we would assign one");
+                }
             }
         } else {
             StackOverflowCheck.singleton().initialize(WordFactory.nullPointer());
@@ -384,7 +407,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     }
 
     @Uninterruptible(reason = "Thread state not yet set up.")
-    private static int attachUnattachedThread(Isolate isolate, boolean inCrashHandler, int vmThreadSize) {
+    private static int attachUnattachedThread(Isolate isolate, boolean startedByIsolate, boolean inCrashHandler, int vmThreadSize) {
         IsolateThread thread = VMThreads.singleton().allocateIsolateThread(vmThreadSize);
         if (thread.isNull()) {
             return CEntryPointErrors.THREADING_INITIALIZATION_FAILED;
@@ -397,7 +420,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
             // print diagnostics. A full attach operation would be too dangerous.
             SubstrateDiagnostics.setOnlyAttachedForCrashHandler(thread);
         } else {
-            int error = VMThreads.singleton().attachThread(thread);
+            int error = VMThreads.singleton().attachThread(thread, startedByIsolate);
             if (error != CEntryPointErrors.NO_ERROR) {
                 VMThreads.singleton().freeIsolateThread(thread);
                 return error;
@@ -413,10 +436,10 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
 
     @SubstrateForeignCallTarget(stubCallingConvention = false)
     private static void ensureJavaThread() {
-        JavaThreads.ensureJavaThread();
+        PlatformThreads.ensureCurrentAssigned();
     }
 
-    @Snippet
+    @Snippet(allowMissingProbabilities = true)
     public static int detachThreadSnippet() {
         int result = CEntryPointErrors.NO_ERROR;
         if (MultiThreaded.getValue()) {
@@ -442,7 +465,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         return CEntryPointErrors.NO_ERROR;
     }
 
-    @Snippet
+    @Snippet(allowMissingProbabilities = true)
     public static int tearDownIsolateSnippet() {
         return runtimeCallTearDownIsolate(TEAR_DOWN_ISOLATE);
     }
@@ -451,7 +474,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     private static int tearDownIsolate() {
         try {
             RuntimeSupport.executeTearDownHooks();
-            if (!JavaThreads.singleton().tearDown()) {
+            if (!PlatformThreads.singleton().tearDown()) {
                 return CEntryPointErrors.UNSPECIFIED;
             }
 
@@ -463,19 +486,19 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         }
     }
 
-    @Snippet
-    public static int enterIsolateSnippet(Isolate isolate) {
+    @Snippet(allowMissingProbabilities = true)
+    public static int enterByIsolateSnippet(Isolate isolate) {
         int result;
         if (MultiThreaded.getValue()) {
             writeCurrentVMThread(WordFactory.nullPointer());
-            result = runtimeCall(ENTER_ISOLATE_MT, isolate);
+            result = runtimeCall(ENTER_BY_ISOLATE_MT, isolate);
             if (result == CEntryPointErrors.NO_ERROR) {
                 if (VMThreads.StatusSupport.isStatusNativeOrSafepoint()) {
-                    Safepoint.transitionNativeToJava();
+                    Safepoint.transitionNativeToJava(false);
                 }
             }
         } else {
-            result = Isolates.checkSanity(isolate);
+            result = Isolates.checkIsolate(isolate);
             if (result == CEntryPointErrors.NO_ERROR && SpawnIsolates.getValue()) {
                 setHeapBase(Isolates.getHeapBase(isolate));
             }
@@ -485,10 +508,10 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
 
     @Uninterruptible(reason = "Thread state not set up yet")
     @SubstrateForeignCallTarget(stubCallingConvention = false)
-    private static int enterIsolateMT(Isolate isolate) {
-        int sanityError = Isolates.checkSanity(isolate);
-        if (sanityError != CEntryPointErrors.NO_ERROR) {
-            return sanityError;
+    private static int enterByIsolateMT(Isolate isolate) {
+        int error = Isolates.checkIsolate(isolate);
+        if (error != CEntryPointErrors.NO_ERROR) {
+            return error;
         }
         if (SpawnIsolates.getValue()) {
             setHeapBase(Isolates.getHeapBase(isolate));
@@ -504,7 +527,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         return CEntryPointErrors.NO_ERROR;
     }
 
-    @Snippet
+    @Snippet(allowMissingProbabilities = true)
     public static int enterSnippet(IsolateThread thread) {
         Isolate isolate;
         if (MultiThreaded.getValue()) {
@@ -527,14 +550,14 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
             setHeapBase(Isolates.getHeapBase(isolate));
         }
         if (MultiThreaded.getValue()) {
-            if (runtimeAssertionsEnabled()) {
+            if (runtimeAssertionsEnabled() || SubstrateOptions.CheckIsolateThreadAtEntry.getValue()) {
                 /*
                  * Verification must happen before the thread state transition. It locks the raw
                  * THREAD_MUTEX, so the thread must still be invisible to the safepoint manager.
                  */
                 runtimeCall(VERIFY_ISOLATE_THREAD, thread);
             }
-            Safepoint.transitionNativeToJava();
+            Safepoint.transitionNativeToJava(false);
         }
 
         return CEntryPointErrors.NO_ERROR;
@@ -563,7 +586,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         return CEntryPointErrors.NO_ERROR;
     }
 
-    @Snippet
+    @Snippet(allowMissingProbabilities = true)
     public static int reportExceptionSnippet(Throwable exception) {
         return runtimeCall(REPORT_EXCEPTION, exception);
     }
@@ -590,7 +613,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         }
     }
 
-    @Snippet
+    @Snippet(allowMissingProbabilities = true)
     public static int returnFromJavaToCSnippet() {
         if (MultiThreaded.getValue()) {
             VMThreads.StatusSupport.setStatusNative();
@@ -598,9 +621,9 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         return CEntryPointErrors.NO_ERROR;
     }
 
-    @Snippet
+    @Snippet(allowMissingProbabilities = true)
     public static boolean isAttachedSnippet(Isolate isolate) {
-        return Isolates.checkSanity(isolate) == CEntryPointErrors.NO_ERROR &&
+        return Isolates.checkIsolate(isolate) == CEntryPointErrors.NO_ERROR &&
                         (!MultiThreaded.getValue() || runtimeCallIsAttached(IS_ATTACHED_MT, isolate));
     }
 
@@ -613,7 +636,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         return VMThreads.isInitialized() && VMThreads.singleton().findIsolateThreadForCurrentOSThread(false).isNonNull();
     }
 
-    @Snippet
+    @Snippet(allowMissingProbabilities = true)
     public static void failFatallySnippet(int code, CCharPointer message) {
         runtimeCallFailFatally(FAIL_FATALLY, code, message);
     }
@@ -634,20 +657,42 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         new CEntryPointSnippets(options, providers, vmThreadSize, lowerings);
     }
 
+    private final SnippetInfo createIsolate;
+    private final SnippetInfo attachThread;
+    private final SnippetInfo enter;
+    private final SnippetInfo enterByIsolate;
+
+    private final SnippetInfo returnFromJavaToC;
+    private final SnippetInfo detachThread;
+    private final SnippetInfo reportException;
+    private final SnippetInfo tearDownIsolate;
+
+    private final SnippetInfo isAttached;
+    private final SnippetInfo failFatally;
+
     private CEntryPointSnippets(OptionValues options, Providers providers, int vmThreadSize,
                     Map<Class<? extends Node>, NodeLoweringProvider<?>> lowerings) {
         super(options, providers);
+
+        this.createIsolate = snippet(providers, CEntryPointSnippets.class, "createIsolateSnippet");
+        this.attachThread = snippet(providers, CEntryPointSnippets.class, "attachThreadSnippet");
+        this.enter = snippet(providers, CEntryPointSnippets.class, "enterSnippet");
+        this.enterByIsolate = snippet(providers, CEntryPointSnippets.class, "enterByIsolateSnippet");
+
+        this.returnFromJavaToC = snippet(providers, CEntryPointSnippets.class, "returnFromJavaToCSnippet");
+        this.detachThread = snippet(providers, CEntryPointSnippets.class, "detachThreadSnippet");
+        this.reportException = snippet(providers, CEntryPointSnippets.class, "reportExceptionSnippet");
+        this.tearDownIsolate = snippet(providers, CEntryPointSnippets.class, "tearDownIsolateSnippet");
+
+        this.isAttached = snippet(providers, CEntryPointSnippets.class, "isAttachedSnippet");
+        this.failFatally = snippet(providers, CEntryPointSnippets.class, "failFatallySnippet");
+
         lowerings.put(CEntryPointEnterNode.class, new EnterLowering(vmThreadSize));
         lowerings.put(CEntryPointLeaveNode.class, new LeaveLowering());
         lowerings.put(CEntryPointUtilityNode.class, new UtilityLowering());
     }
 
     protected class EnterLowering implements NodeLoweringProvider<CEntryPointEnterNode> {
-
-        private final SnippetInfo createIsolate = snippet(CEntryPointSnippets.class, "createIsolateSnippet");
-        private final SnippetInfo attachThread = snippet(CEntryPointSnippets.class, "attachThreadSnippet");
-        private final SnippetInfo enter = snippet(CEntryPointSnippets.class, "enterSnippet");
-        private final SnippetInfo enterThreadFromTL = snippet(CEntryPointSnippets.class, "enterIsolateSnippet");
 
         private final int vmThreadSize;
 
@@ -670,12 +715,13 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
                 case AttachThread:
                     args = new Arguments(attachThread, node.graph().getGuardsStage(), tool.getLoweringStage());
                     args.add("isolate", node.getParameter());
+                    args.add("startedByIsolate", node.getStartedByIsolate());
                     args.add("ensureJavaThread", node.getEnsureJavaThread());
                     args.add("inCrashHandler", node.isCrashHandler());
                     args.addConst("vmThreadSize", vmThreadSize);
                     break;
-                case EnterIsolate:
-                    args = new Arguments(enterThreadFromTL, node.graph().getGuardsStage(), tool.getLoweringStage());
+                case EnterByIsolate:
+                    args = new Arguments(enterByIsolate, node.graph().getGuardsStage(), tool.getLoweringStage());
                     args.add("isolate", node.getParameter());
                     break;
                 case Enter:
@@ -686,18 +732,13 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
                 default:
                     throw shouldNotReachHere();
             }
-            SnippetTemplate template = template(node, args);
+            SnippetTemplate template = template(tool, node, args);
             template.setMayRemoveLocation(true);
-            template.instantiate(providers.getMetaAccess(), node, SnippetTemplate.DEFAULT_REPLACER, args);
+            template.instantiate(tool.getMetaAccess(), node, SnippetTemplate.DEFAULT_REPLACER, args);
         }
     }
 
     protected class LeaveLowering implements NodeLoweringProvider<CEntryPointLeaveNode> {
-        private final SnippetInfo returnFromJavaToC = snippet(CEntryPointSnippets.class, "returnFromJavaToCSnippet");
-        private final SnippetInfo detachThread = snippet(CEntryPointSnippets.class, "detachThreadSnippet");
-        private final SnippetInfo reportException = snippet(CEntryPointSnippets.class, "reportExceptionSnippet");
-        private final SnippetInfo tearDownIsolate = snippet(CEntryPointSnippets.class, "tearDownIsolateSnippet");
-
         @Override
         public void lower(CEntryPointLeaveNode node, LoweringTool tool) {
             if (tool.getLoweringStage() != LoweringTool.StandardLoweringStage.LOW_TIER) {
@@ -721,15 +762,12 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
                 default:
                     throw shouldNotReachHere();
             }
-            template(node, args).instantiate(providers.getMetaAccess(), node, SnippetTemplate.DEFAULT_REPLACER, args);
+            template(tool, node, args).instantiate(tool.getMetaAccess(), node, SnippetTemplate.DEFAULT_REPLACER, args);
         }
 
     }
 
     protected class UtilityLowering implements NodeLoweringProvider<CEntryPointUtilityNode> {
-        private final SnippetInfo isAttached = snippet(CEntryPointSnippets.class, "isAttachedSnippet");
-        private final SnippetInfo failFatally = snippet(CEntryPointSnippets.class, "failFatallySnippet");
-
         @Override
         public void lower(CEntryPointUtilityNode node, LoweringTool tool) {
             if (tool.getLoweringStage() != LoweringTool.StandardLoweringStage.LOW_TIER) {
@@ -749,7 +787,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
                 default:
                     throw shouldNotReachHere();
             }
-            template(node, args).instantiate(providers.getMetaAccess(), node, SnippetTemplate.DEFAULT_REPLACER, args);
+            template(tool, node, args).instantiate(tool.getMetaAccess(), node, SnippetTemplate.DEFAULT_REPLACER, args);
         }
     }
 }
