@@ -24,10 +24,6 @@
  */
 package com.oracle.svm.core.jdk;
 
-//Checkstyle: allow reflection
-
-import static com.oracle.svm.core.util.VMError.guarantee;
-
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.HashMap;
@@ -37,27 +33,23 @@ import java.util.concurrent.ConcurrentMap;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
 import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
 import org.graalvm.nativeimage.ImageSingletons;
-import org.graalvm.nativeimage.hosted.Feature;
 
 import com.oracle.svm.core.StaticFieldsSupport;
 import com.oracle.svm.core.annotate.Alias;
-import com.oracle.svm.core.annotate.AutomaticFeature;
 import com.oracle.svm.core.annotate.InjectAccessors;
 import com.oracle.svm.core.annotate.RecomputeFieldValue;
 import com.oracle.svm.core.annotate.RecomputeFieldValue.Kind;
-import com.oracle.svm.core.annotate.Substitute;
 import com.oracle.svm.core.annotate.TargetClass;
-import com.oracle.svm.core.annotate.TargetElement;
-import com.oracle.svm.core.meta.SharedField;
+import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
+import com.oracle.svm.core.feature.InternalFeature;
+import com.oracle.svm.core.fieldvaluetransformer.FieldValueTransformerWithAvailability;
+import com.oracle.svm.core.reflect.target.ReflectionSubstitutionSupport;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.util.ReflectionUtil;
 
-import jdk.vm.ci.meta.MetaAccessProvider;
-import jdk.vm.ci.meta.ResolvedJavaField;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 /**
  * This file contains most of the code necessary for supporting VarHandle in native images. The
@@ -97,9 +89,8 @@ import sun.misc.Unsafe;
  * VarHandle access to arrays is the simplest case: we only need field value recomputations for the
  * array base offset and array index shift.
  */
-@AutomaticFeature
-public class VarHandleFeature implements Feature {
-    private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
+@AutomaticallyRegisteredFeature
+public class VarHandleFeature implements InternalFeature {
 
     /** The JDK 11 class VarHandleObjects got renamed to VarHandleReferences. */
     static final String OBJECT_SUFFIX = JavaVersionUtil.JAVA_SPEC <= 11 ? "Objects" : "References";
@@ -110,22 +101,15 @@ public class VarHandleFeature implements Feature {
     private Consumer<Field> markAsUnsafeAccessed;
 
     @Override
-    public boolean isInConfiguration(IsInConfigurationAccess access) {
-        return JavaVersionUtil.JAVA_SPEC >= 11;
-    }
-
-    @Override
     public void afterRegistration(AfterRegistrationAccess access) {
         try {
             for (String typeName : new String[]{"Booleans", "Bytes", "Chars", "Doubles", "Floats", "Ints", "Longs", "Shorts", OBJECT_SUFFIX}) {
-                // Checkstyle: stop
                 buildInfo(false, "receiverType",
                                 Class.forName("java.lang.invoke.VarHandle" + typeName + "$FieldInstanceReadOnly"),
                                 Class.forName("java.lang.invoke.VarHandle" + typeName + "$FieldInstanceReadWrite"));
                 buildInfo(true, "base",
                                 Class.forName("java.lang.invoke.VarHandle" + typeName + "$FieldStaticReadOnly"),
                                 Class.forName("java.lang.invoke.VarHandle" + typeName + "$FieldStaticReadWrite"));
-                // Checkstyle: resume
             }
         } catch (ClassNotFoundException ex) {
             throw VMError.shouldNotReachHere(ex);
@@ -153,7 +137,7 @@ public class VarHandleFeature implements Feature {
                 /* Search the declared fields for a field with a matching offset. */
                 for (Field field : cur.getDeclaredFields()) {
                     if (Modifier.isStatic(field.getModifiers()) == info.isStatic) {
-                        long fieldOffset = info.isStatic ? UNSAFE.staticFieldOffset(field) : UNSAFE.objectFieldOffset(field);
+                        long fieldOffset = info.isStatic ? Unsafe.getUnsafe().staticFieldOffset(field) : Unsafe.getUnsafe().objectFieldOffset(field);
                         if (fieldOffset == originalFieldOffset) {
                             return field;
                         }
@@ -220,14 +204,20 @@ class VarHandleInfo {
     }
 }
 
-class VarHandleFieldOffsetComputer implements RecomputeFieldValue.CustomFieldValueComputer {
+class VarHandleFieldOffsetComputer implements FieldValueTransformerWithAvailability {
     @Override
-    public Object compute(MetaAccessProvider metaAccess, ResolvedJavaField original, ResolvedJavaField annotated, Object varHandle) {
-        Field field = ImageSingletons.lookup(VarHandleFeature.class).findVarHandleField(varHandle);
-        SharedField sField = (SharedField) metaAccess.lookupJavaField(field);
+    public ValueAvailability valueAvailability() {
+        return ValueAvailability.AfterAnalysis;
+    }
 
-        guarantee(sField.isAccessed() && sField.getLocation() > 0, "Field not marked as accessed");
-        return Long.valueOf(sField.getLocation());
+    @Override
+    public Object transform(Object receiver, Object originalValue) {
+        Field field = ImageSingletons.lookup(VarHandleFeature.class).findVarHandleField(receiver);
+        int offset = ImageSingletons.lookup(ReflectionSubstitutionSupport.class).getFieldOffset(field, true);
+        if (offset <= 0) {
+            throw VMError.shouldNotReachHere("Field is not marked as unsafe accessed: " + field);
+        }
+        return Long.valueOf(offset);
     }
 }
 
@@ -270,7 +260,7 @@ class VarHandleObjectsClassNameProvider implements Function<TargetClass, String>
  * (instead of storing it in each individual VarHandle instance). But we just need to handle what
  * the JDK gives us.
  */
-@TargetClass(className = "java.lang.invoke.VarHandleBooleans", innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleBooleans", innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleBooleans_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = boolean[].class) //
     int abase;
@@ -278,7 +268,7 @@ final class Target_java_lang_invoke_VarHandleBooleans_Array {
     int ashift;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleBytes", innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleBytes", innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleBytes_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = byte[].class) //
     int abase;
@@ -286,7 +276,7 @@ final class Target_java_lang_invoke_VarHandleBytes_Array {
     int ashift;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleChars", innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleChars", innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleChars_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = char[].class) //
     int abase;
@@ -294,7 +284,7 @@ final class Target_java_lang_invoke_VarHandleChars_Array {
     int ashift;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleDoubles", innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleDoubles", innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleDoubles_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = double[].class) //
     int abase;
@@ -302,7 +292,7 @@ final class Target_java_lang_invoke_VarHandleDoubles_Array {
     int ashift;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleFloats", innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleFloats", innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleFloats_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = float[].class) //
     int abase;
@@ -310,7 +300,7 @@ final class Target_java_lang_invoke_VarHandleFloats_Array {
     int ashift;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleInts", innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleInts", innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleInts_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = int[].class) //
     int abase;
@@ -318,7 +308,7 @@ final class Target_java_lang_invoke_VarHandleInts_Array {
     int ashift;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleLongs", innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleLongs", innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleLongs_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = long[].class) //
     int abase;
@@ -326,7 +316,7 @@ final class Target_java_lang_invoke_VarHandleLongs_Array {
     int ashift;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleShorts", innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleShorts", innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleShorts_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = short[].class) //
     int abase;
@@ -334,7 +324,7 @@ final class Target_java_lang_invoke_VarHandleShorts_Array {
     int ashift;
 }
 
-@TargetClass(classNameProvider = VarHandleObjectsClassNameProvider.class, innerClass = "Array", onlyWith = JDK11OrLater.class)
+@TargetClass(classNameProvider = VarHandleObjectsClassNameProvider.class, innerClass = "Array")
 final class Target_java_lang_invoke_VarHandleObjects_Array {
     @Alias @RecomputeFieldValue(kind = Kind.ArrayBaseOffset, declClass = Object[].class) //
     int abase;
@@ -348,55 +338,55 @@ final class Target_java_lang_invoke_VarHandleObjects_Array {
  * that).
  */
 
-@TargetClass(className = "java.lang.invoke.VarHandleBooleans", innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleBooleans", innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleBooleans_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleBytes", innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleBytes", innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleBytes_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleChars", innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleChars", innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleChars_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleDoubles", innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleDoubles", innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleDoubles_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleFloats", innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleFloats", innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleFloats_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleInts", innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleInts", innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleInts_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleLongs", innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleLongs", innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleLongs_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleShorts", innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleShorts", innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleShorts_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
 }
 
-@TargetClass(classNameProvider = VarHandleObjectsClassNameProvider.class, innerClass = "FieldInstanceReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(classNameProvider = VarHandleObjectsClassNameProvider.class, innerClass = "FieldInstanceReadOnly")
 final class Target_java_lang_invoke_VarHandleObjects_FieldInstanceReadOnly {
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
@@ -409,7 +399,7 @@ final class Target_java_lang_invoke_VarHandleObjects_FieldInstanceReadOnly {
  * VM, but a single byte[] array (for primitive types) or Object[] array (for Object types).
  */
 
-@TargetClass(className = "java.lang.invoke.VarHandleBooleans", innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleBooleans", innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleBooleans_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBasePrimitiveAccessor.class) //
     Object base;
@@ -417,7 +407,7 @@ final class Target_java_lang_invoke_VarHandleBooleans_FieldStaticReadOnly {
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleBytes", innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleBytes", innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleBytes_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBasePrimitiveAccessor.class) //
     Object base;
@@ -425,7 +415,7 @@ final class Target_java_lang_invoke_VarHandleBytes_FieldStaticReadOnly {
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleChars", innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleChars", innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleChars_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBasePrimitiveAccessor.class) //
     Object base;
@@ -433,7 +423,7 @@ final class Target_java_lang_invoke_VarHandleChars_FieldStaticReadOnly {
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleDoubles", innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleDoubles", innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleDoubles_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBasePrimitiveAccessor.class) //
     Object base;
@@ -441,7 +431,7 @@ final class Target_java_lang_invoke_VarHandleDoubles_FieldStaticReadOnly {
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleFloats", innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleFloats", innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleFloats_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBasePrimitiveAccessor.class) //
     Object base;
@@ -449,7 +439,7 @@ final class Target_java_lang_invoke_VarHandleFloats_FieldStaticReadOnly {
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleInts", innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleInts", innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleInts_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBasePrimitiveAccessor.class) //
     Object base;
@@ -457,7 +447,7 @@ final class Target_java_lang_invoke_VarHandleInts_FieldStaticReadOnly {
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleLongs", innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleLongs", innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleLongs_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBasePrimitiveAccessor.class) //
     Object base;
@@ -465,7 +455,7 @@ final class Target_java_lang_invoke_VarHandleLongs_FieldStaticReadOnly {
     long fieldOffset;
 }
 
-@TargetClass(className = "java.lang.invoke.VarHandleShorts", innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(className = "java.lang.invoke.VarHandleShorts", innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleShorts_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBasePrimitiveAccessor.class) //
     Object base;
@@ -473,26 +463,10 @@ final class Target_java_lang_invoke_VarHandleShorts_FieldStaticReadOnly {
     long fieldOffset;
 }
 
-@TargetClass(classNameProvider = VarHandleObjectsClassNameProvider.class, innerClass = "FieldStaticReadOnly", onlyWith = JDK11OrLater.class)
+@TargetClass(classNameProvider = VarHandleObjectsClassNameProvider.class, innerClass = "FieldStaticReadOnly")
 final class Target_java_lang_invoke_VarHandleObjects_FieldStaticReadOnly {
     @Alias @InjectAccessors(VarHandleFieldStaticBaseObjectAccessor.class) //
     Object base;
     @Alias @RecomputeFieldValue(kind = Kind.Custom, declClass = VarHandleFieldOffsetComputer.class) //
     long fieldOffset;
-}
-
-@TargetClass(className = "java.lang.invoke.VarHandle", onlyWith = JDK11OrLater.class)
-final class Target_java_lang_invoke_VarHandle {
-
-    /**
-     * JDK 11 does not have an override of toString(), but later JDK versions do. The implementation
-     * collects details about the MemberName, which are method handle internals that must not be
-     * reachable.
-     */
-    @TargetElement(onlyWith = JDK17OrLater.class)
-    @Substitute
-    @Override
-    public String toString() {
-        return "VarHandle[printing VarHandle details is not supported on Substrate VM]";
-    }
 }
