@@ -31,90 +31,33 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.regex.Pattern;
 
-import org.graalvm.compiler.options.OptionType;
-
-import com.oracle.svm.driver.MacroOption.MacroOptionKind;
+import com.oracle.svm.core.option.OptionOrigin;
 import com.oracle.svm.driver.NativeImage.ArgumentQueue;
-
-import jdk.vm.ci.aarch64.AArch64;
-import jdk.vm.ci.amd64.AMD64;
-import jdk.vm.ci.code.Architecture;
-import jdk.vm.ci.runtime.JVMCI;
 
 class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
 
-    private static final String verboseOption = "--verbose";
+    static final String verboseOption = "--verbose";
     private static final String requireValidJarFileMessage = "-jar requires a valid jarfile";
     private static final String newStyleClasspathOptionName = "--class-path";
 
-    private static final String addModulesOption = "--add-modules";
+    static final String addModulesOption = "--add-modules";
     private static final String addModulesErrorMessage = " requires modules to be specified";
 
-    static final String helpText = NativeImage.getResource("/Help.txt");
-    static final String helpExtraText = NativeImage.getResource("/HelpExtra.txt");
-
     /* Defunct legacy options that we have to accept to maintain backward compatibility */
-    static final String noServerOption = "--no-server";
-    static final String verboseServerOption = "--verbose-server";
-    static final String serverOptionPrefix = "--server-";
+    private static final String noServerOption = "--no-server";
 
     DefaultOptionHandler(NativeImage nativeImage) {
         super(nativeImage);
     }
 
-    boolean useDebugAttach = false;
     boolean disableAtFiles = false;
-
-    private static void singleArgumentCheck(ArgumentQueue args, String arg) {
-        if (!args.isEmpty()) {
-            NativeImage.showError("Option " + arg + " cannot be combined with other options.");
-        }
-    }
-
-    private static final String javaRuntimeVersion = System.getProperty("java.runtime.version");
 
     @Override
     public boolean consume(ArgumentQueue args) {
         String headArg = args.peek();
         switch (headArg) {
-            case "--help":
-                args.poll();
-                singleArgumentCheck(args, headArg);
-                nativeImage.showMessage(helpText);
-                nativeImage.showNewline();
-                nativeImage.apiOptionHandler.printOptions(nativeImage::showMessage, false);
-                nativeImage.showNewline();
-                nativeImage.optionRegistry.showOptions(null, true, nativeImage::showMessage);
-                nativeImage.showNewline();
-                System.exit(0);
-                return true;
-            case "--version":
-                args.poll();
-                singleArgumentCheck(args, headArg);
-                String message;
-                if (NativeImage.IS_AOT) {
-                    message = System.getProperty("java.vm.version");
-                } else {
-                    message = "native-image " + NativeImage.graalvmVersion + " " + NativeImage.graalvmConfig;
-                }
-                message += " (Java Version " + javaRuntimeVersion + ")";
-                nativeImage.showMessage(message);
-                System.exit(0);
-                return true;
-            case "--help-extra":
-                args.poll();
-                singleArgumentCheck(args, headArg);
-                nativeImage.showMessage(helpExtraText);
-                nativeImage.apiOptionHandler.printOptions(nativeImage::showMessage, true);
-                nativeImage.showNewline();
-                nativeImage.optionRegistry.showOptions(MacroOptionKind.Macro, true, nativeImage::showMessage);
-                nativeImage.showNewline();
-                System.exit(0);
-                return true;
             case "-cp":
             case "-classpath":
             case newStyleClasspathOptionName:
@@ -154,22 +97,8 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 if (addModulesArgs == null) {
                     NativeImage.showError(headArg + addModulesErrorMessage);
                 }
-                if (nativeImage.config.useJavaModules()) {
-                    nativeImage.addImageBuilderJavaArgs(addModulesOption, addModulesArgs);
-                    nativeImage.addAddedModules(addModulesArgs);
-                } else {
-                    NativeImage.showWarning("Ignoring unsupported module option: " + addModulesOption + " " + addModulesArgs);
-                }
-                return true;
-            case "--configurations-path":
-                args.poll();
-                String configPath = args.poll();
-                if (configPath == null) {
-                    NativeImage.showError(headArg + " requires a " + File.pathSeparator + " separated list of directories");
-                }
-                for (String configDir : configPath.split(File.pathSeparator)) {
-                    nativeImage.addMacroOptionRoot(nativeImage.canonicalize(Paths.get(configDir)));
-                }
+                nativeImage.addImageBuilderJavaArgs(addModulesOption, addModulesArgs);
+                nativeImage.addAddedModules(addModulesArgs);
                 return true;
             case "-jar":
                 args.poll();
@@ -180,44 +109,6 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 handleJarFileArg(nativeImage.canonicalize(Paths.get(jarFilePathStr)));
                 nativeImage.setJarOptionMode(true);
                 return true;
-            case verboseOption:
-                args.poll();
-                nativeImage.setVerbose(true);
-                return true;
-            case "--dry-run":
-                args.poll();
-                nativeImage.setDryRun(true);
-                return true;
-            case "--expert-options":
-                args.poll();
-                nativeImage.setPrintFlagsOptionQuery(OptionType.User.name());
-                return true;
-            case "--expert-options-all":
-                args.poll();
-                nativeImage.setPrintFlagsOptionQuery("");
-                return true;
-            case "--expert-options-detail":
-                args.poll();
-                String optionNames = args.poll();
-                nativeImage.setPrintFlagsWithExtraHelpOptionQuery(optionNames);
-                return true;
-            case noServerOption:
-            case verboseServerOption:
-                args.poll();
-                NativeImage.showWarning("Ignoring server-mode native-image argument " + headArg + ".");
-                return true;
-            case "--exclude-config":
-                args.poll();
-                String excludeJar = args.poll();
-                if (excludeJar == null) {
-                    NativeImage.showError(headArg + " requires two arguments: a jar regular expression and a resource regular expression");
-                }
-                String excludeConfig = args.poll();
-                if (excludeConfig == null) {
-                    NativeImage.showError(headArg + " requires resource regular expression");
-                }
-                nativeImage.addExcludeConfig(Pattern.compile(excludeJar), Pattern.compile(excludeConfig));
-                return true;
             case "--diagnostics-mode":
                 args.poll();
                 nativeImage.setDiagnostics(true);
@@ -225,41 +116,18 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 nativeImage.addPlainImageBuilderArg("-H:DiagnosticsDir=" + nativeImage.diagnosticsDir);
                 System.out.println("# Diagnostics mode enabled: image-build reports are saved to " + nativeImage.diagnosticsDir);
                 return true;
-            case "--list-cpu-features":
-                args.poll();
-                Architecture arch = JVMCI.getRuntime().getHostJVMCIBackend().getTarget().arch;
-                if (arch instanceof AMD64) {
-                    nativeImage.showMessage("All AMD64 CPUFeatures: " + Arrays.toString(AMD64.CPUFeature.values()));
-                    nativeImage.showNewline();
-                    nativeImage.showMessage("Host machine AMD64 CPUFeatures: " + ((AMD64) arch).getFeatures().toString());
-                } else {
-                    nativeImage.showMessage("All AArch64 CPUFeatures: " + Arrays.toString(AArch64.CPUFeature.values()));
-                    nativeImage.showNewline();
-                    nativeImage.showMessage("Host machine AArch64 CPUFeatures: " + ((AArch64) arch).getFeatures().toString());
-                }
-                nativeImage.showNewline();
-                System.exit(0);
-                return true;
             case "--disable-@files":
                 args.poll();
                 disableAtFiles = true;
                 return true;
-        }
-
-        String debugAttach = "--debug-attach";
-        if (headArg.startsWith(debugAttach)) {
-            if (useDebugAttach) {
-                throw NativeImage.showError("The " + debugAttach + " option can only be used once.");
-            }
-            useDebugAttach = true;
-            String debugAttachArg = args.poll();
-            String addressSuffix = debugAttachArg.substring(debugAttach.length());
-            String address = addressSuffix.isEmpty() ? "8000" : addressSuffix.substring(1);
-            /* Using agentlib to allow interoperability with other agents */
-            nativeImage.addImageBuilderJavaArgs("-agentlib:jdwp=transport=dt_socket,server=y,address=" + address + ",suspend=y");
-            /* Disable watchdog mechanism */
-            nativeImage.addPlainImageBuilderArg(nativeImage.oHDeadlockWatchdogInterval + "0");
-            return true;
+            case noServerOption:
+                args.poll();
+                NativeImage.showWarning("Ignoring server-mode native-image argument " + headArg + ".");
+                return true;
+            case "--enable-preview":
+                args.poll();
+                nativeImage.addCustomJavaArgs("--enable-preview");
+                return true;
         }
 
         String singleArgClasspathPrefix = newStyleClasspathOptionName + "=";
@@ -273,12 +141,12 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
         }
         if (headArg.startsWith(NativeImage.oH)) {
             args.poll();
-            nativeImage.addCustomImageBuilderArgs(NativeImage.injectHostedOptionOrigin(headArg, args.argumentOrigin));
+            nativeImage.addPlainImageBuilderArg(NativeImage.injectHostedOptionOrigin(headArg, args.argumentOrigin));
             return true;
         }
         if (headArg.startsWith(NativeImage.oR)) {
             args.poll();
-            nativeImage.addCustomImageBuilderArgs(headArg);
+            nativeImage.addPlainImageBuilderArg(headArg);
             return true;
         }
         String javaArgsPrefix = "-D";
@@ -307,48 +175,21 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             }
             return true;
         }
-        String optimizeOption = "-O";
-        if (headArg.startsWith(optimizeOption)) {
-            args.poll();
-            if (headArg.equals(optimizeOption)) {
-                NativeImage.showError("The " + optimizeOption + " option should not be followed by a space");
-            } else {
-                nativeImage.addPlainImageBuilderArg(nativeImage.oHOptimize + headArg.substring(2));
-            }
-            return true;
-        }
-        if (headArg.startsWith(serverOptionPrefix)) {
-            args.poll();
-            NativeImage.showWarning("Ignoring server-mode native-image argument " + headArg + ".");
-            String serverOptionCommand = headArg.substring(serverOptionPrefix.length());
-            if (!serverOptionCommand.startsWith("session=")) {
-                /*
-                 * All but the --server-session=... option used to exit(0). We want to simulate that
-                 * behaviour for proper backward compatibility.
-                 */
-                System.exit(0);
-            }
-            return true;
-        }
         if (headArg.startsWith(addModulesOption + "=")) {
             args.poll();
             String addModulesArgs = headArg.substring(addModulesOption.length() + 1);
             if (addModulesArgs.isEmpty()) {
                 NativeImage.showError(headArg + addModulesErrorMessage);
             }
-            if (nativeImage.config.useJavaModules()) {
-                nativeImage.addImageBuilderJavaArgs(addModulesOption, addModulesArgs);
-                nativeImage.addAddedModules(addModulesArgs);
-            } else {
-                NativeImage.showWarning("Ignoring unsupported module option: " + addModulesOption + " " + addModulesArgs);
-            }
+            nativeImage.addImageBuilderJavaArgs(addModulesOption, addModulesArgs);
+            nativeImage.addAddedModules(addModulesArgs);
             return true;
         }
         if (headArg.startsWith("@") && !disableAtFiles) {
             args.poll();
             headArg = headArg.substring(1);
             Path argFile = Paths.get(headArg);
-            NativeImage.NativeImageArgsProcessor processor = nativeImage.new NativeImageArgsProcessor(argFile.toString());
+            NativeImage.NativeImageArgsProcessor processor = nativeImage.new NativeImageArgsProcessor(OptionOrigin.argFilePrefix + argFile);
             readArgFile(argFile).forEach(processor::accept);
             List<String> leftoverArgs = processor.apply(false);
             if (leftoverArgs.size() > 0) {
