@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,8 +25,6 @@
 
 package com.oracle.svm.truffle;
 
-//Checkstyle: allow reflection
-
 import static org.graalvm.compiler.java.BytecodeParserOptions.InlineDuringParsingMaxDepth;
 import static org.graalvm.compiler.nodes.graphbuilderconf.InlineInvokePlugin.InlineInfo.createStandardInlineInfo;
 
@@ -44,6 +42,8 @@ import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.IdentityHashMap;
 import java.util.Iterator;
+import java.util.LinkedHashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
@@ -100,34 +100,45 @@ import java.util.function.ToLongFunction;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 
+import org.graalvm.collections.Pair;
 import org.graalvm.compiler.api.replacements.SnippetReflectionProvider;
+import org.graalvm.compiler.core.phases.HighTier;
 import org.graalvm.compiler.graph.Node;
+import org.graalvm.compiler.nodes.FrameState;
+import org.graalvm.compiler.nodes.StructuredGraph;
 import org.graalvm.compiler.nodes.ValueNode;
 import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderConfiguration;
 import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderContext;
 import org.graalvm.compiler.nodes.graphbuilderconf.InlineInvokePlugin;
-import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin;
+import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin.RequiredInvocationPlugin;
 import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins;
+import org.graalvm.compiler.nodes.java.MethodCallTargetNode;
 import org.graalvm.compiler.nodes.spi.Replacements;
 import org.graalvm.compiler.options.Option;
 import org.graalvm.compiler.options.OptionValues;
+import org.graalvm.compiler.phases.common.CanonicalizerPhase;
+import org.graalvm.compiler.phases.tiers.Suites;
 import org.graalvm.compiler.phases.util.Providers;
-import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
 import org.graalvm.compiler.truffle.compiler.PartialEvaluator;
 import org.graalvm.compiler.truffle.compiler.nodes.asserts.NeverPartOfCompilationNode;
+import org.graalvm.compiler.truffle.compiler.phases.TruffleHostInliningPhase;
 import org.graalvm.compiler.truffle.compiler.substitutions.KnownTruffleTypes;
+import org.graalvm.compiler.truffle.compiler.substitutions.TruffleInvocationPlugins;
 import org.graalvm.compiler.truffle.runtime.TruffleCallBoundary;
+import org.graalvm.nativeimage.AnnotationAccess;
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.hosted.Feature;
 
 import com.oracle.graal.pointsto.meta.AnalysisField;
 import com.oracle.graal.pointsto.meta.AnalysisMethod;
 import com.oracle.graal.pointsto.meta.HostedProviders;
+import com.oracle.svm.core.ParsingReason;
+import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.annotate.Alias;
 import com.oracle.svm.core.annotate.RecomputeFieldValue;
 import com.oracle.svm.core.annotate.TargetClass;
-import com.oracle.svm.core.annotate.Uninterruptible;
 import com.oracle.svm.core.deopt.Deoptimizer;
+import com.oracle.svm.core.feature.InternalFeature;
 import com.oracle.svm.core.graal.meta.RuntimeConfiguration;
 import com.oracle.svm.core.graal.meta.SubstrateForeignCallsProvider;
 import com.oracle.svm.core.graal.snippets.NodeLoweringProvider;
@@ -138,8 +149,13 @@ import com.oracle.svm.core.option.SubstrateOptionsParser;
 import com.oracle.svm.core.stack.JavaStackWalker;
 import com.oracle.svm.core.util.UserError;
 import com.oracle.svm.core.util.VMError;
-import com.oracle.svm.graal.hosted.GraalFeature;
+import com.oracle.svm.graal.hosted.RuntimeCompilationFeature;
+import com.oracle.svm.graal.hosted.RuntimeCompilationFeature.AbstractCallTreeNode;
 import com.oracle.svm.hosted.FeatureImpl;
+import com.oracle.svm.hosted.FeatureImpl.AfterAnalysisAccessImpl;
+import com.oracle.svm.hosted.FeatureImpl.BeforeAnalysisAccessImpl;
+import com.oracle.svm.hosted.FeatureImpl.DuringAnalysisAccessImpl;
+import com.oracle.svm.hosted.FeatureImpl.DuringSetupAccessImpl;
 import com.oracle.svm.hosted.SVMHost;
 import com.oracle.svm.hosted.meta.HostedType;
 import com.oracle.svm.truffle.api.SubstrateThreadLocalHandshake;
@@ -148,23 +164,41 @@ import com.oracle.svm.truffle.api.SubstrateTruffleCompiler;
 import com.oracle.svm.truffle.api.SubstrateTruffleRuntime;
 import com.oracle.truffle.api.CompilerAsserts;
 import com.oracle.truffle.api.CompilerDirectives;
+import com.oracle.truffle.api.CompilerDirectives.TruffleBoundary;
 import com.oracle.truffle.api.Truffle;
 import com.oracle.truffle.api.TruffleRuntime;
 import com.oracle.truffle.api.frame.Frame;
+import com.oracle.truffle.api.nodes.BytecodeOSRNode;
 import com.oracle.truffle.api.nodes.ExplodeLoop;
 
+import jdk.vm.ci.aarch64.AArch64;
+import jdk.vm.ci.amd64.AMD64;
+import jdk.vm.ci.code.Architecture;
 import jdk.vm.ci.meta.MetaAccessProvider;
 import jdk.vm.ci.meta.ResolvedJavaField;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.meta.ResolvedJavaType;
 
 /**
- * Feature that enables compilation of Truffle AST to machine code. This feature requires
+ * Feature that enables compilation of Truffle ASTs to machine code. This feature requires
  * {@link SubstrateTruffleRuntime} to be set as {@link TruffleRuntime}.
  */
-public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
+public class TruffleFeature implements InternalFeature {
+
+    @Override
+    public String getURL() {
+        return "https://github.com/oracle/graal/blob/master/substratevm/src/com.oracle.svm.truffle/src/com/oracle/svm/truffle/TruffleFeature.java";
+    }
+
+    @Override
+    public String getDescription() {
+        return "Enables compilation of Truffle ASTs to machine code";
+    }
 
     public static class Options {
+        @Option(help = "Print truffle boundaries found during the analysis")//
+        public static final HostedOptionKey<Boolean> PrintStaticTruffleBoundaries = new HostedOptionKey<>(false);
+
         @Option(help = "Check that CompilerAsserts.neverPartOfCompilation is not reachable for runtime compilation")//
         public static final HostedOptionKey<Boolean> TruffleCheckNeverPartOfCompilation = new HostedOptionKey<>(true);
 
@@ -179,6 +213,7 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
 
         @Option(help = "Inline trivial methods in Truffle graphs during native image generation")//
         public static final HostedOptionKey<Boolean> TruffleInlineDuringParsing = new HostedOptionKey<>(true);
+
     }
 
     public static final class IsEnabled implements BooleanSupplier {
@@ -189,17 +224,20 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
     }
 
     private final Set<ResolvedJavaMethod> blocklistMethods;
-    private final Set<GraalFeature.CallTreeNode> blocklistViolations;
+    private final Set<ResolvedJavaMethod> tempTargetAllowlistMethods;
+    private final Set<ResolvedJavaMethod> implementationOnlyBlocklist;
     private final Set<ResolvedJavaMethod> warnMethods;
-    private final Set<GraalFeature.CallTreeNode> warnViolations;
-    private final Set<GraalFeature.CallTreeNode> neverPartOfCompilationViolations;
+    private final Set<ResolvedJavaMethod> warnViolations;
+    private final Set<Pair<ResolvedJavaMethod, String>> neverPartOfCompilationViolations;
+    Set<AnalysisMethod> runtimeCompiledMethods;
 
     public TruffleFeature() {
         blocklistMethods = new HashSet<>();
-        blocklistViolations = new TreeSet<>(TruffleFeature::blocklistViolationComparator);
+        tempTargetAllowlistMethods = new HashSet<>();
+        implementationOnlyBlocklist = new HashSet<>();
         warnMethods = new HashSet<>();
-        warnViolations = new TreeSet<>(TruffleFeature::blocklistViolationComparator);
-        neverPartOfCompilationViolations = new TreeSet<>(TruffleFeature::blocklistViolationComparator);
+        warnViolations = ConcurrentHashMap.newKeySet();
+        neverPartOfCompilationViolations = ConcurrentHashMap.newKeySet();
     }
 
     @Override
@@ -215,8 +253,16 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
     }
 
     @Override
+    public void registerInvocationPlugins(Providers providers, SnippetReflectionProvider snippetReflection, GraphBuilderConfiguration.Plugins plugins, ParsingReason reason) {
+        Architecture arch = providers.getLowerer().getTarget().arch;
+        if (arch instanceof AMD64 || arch instanceof AArch64) {
+            TruffleInvocationPlugins.register(arch, plugins.getInvocationPlugins(), providers.getReplacements());
+        }
+    }
+
+    @Override
     public List<Class<? extends Feature>> getRequiredFeatures() {
-        return Arrays.asList(GraalFeature.class, TruffleBaseFeature.class);
+        return List.of(RuntimeCompilationFeature.getRuntimeCompilationFeature(), TruffleBaseFeature.class);
     }
 
     @Override
@@ -239,7 +285,10 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
     }
 
     @Override
-    public void duringSetup(DuringSetupAccess access) {
+    public void duringSetup(DuringSetupAccess a) {
+        var access = (DuringSetupAccessImpl) a;
+        access.getHostVM().registerNeverInlineTrivialHandler(this::neverInlineTrivial);
+
         if (!ImageSingletons.contains(TruffleSupport.class)) {
             ImageSingletons.add(TruffleSupport.class, new TruffleSupport());
         }
@@ -248,13 +297,13 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
     private void registerNeverPartOfCompilation(InvocationPlugins plugins) {
         InvocationPlugins.Registration r = new InvocationPlugins.Registration(plugins, CompilerAsserts.class);
         r.setAllowOverwrite(true);
-        r.register0("neverPartOfCompilation", new InvocationPlugin() {
+        r.register(new RequiredInvocationPlugin("neverPartOfCompilation") {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 return handleNeverPartOfCompilation(b, targetMethod, null);
             }
         });
-        r.register1("neverPartOfCompilation", String.class, new InvocationPlugin() {
+        r.register(new RequiredInvocationPlugin("neverPartOfCompilation", String.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode message) {
                 return handleNeverPartOfCompilation(b, targetMethod, message);
@@ -273,10 +322,14 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
             if (neverPartOfCompilation.stateAfter().getMethod().getDeclaringClass().equals(targetMethod.getDeclaringClass())) {
                 /* Ignore internal use from another method in CompilerAsserts class. */
             } else {
-                GraalFeature.CallTreeNode callerNode = ((GraalFeature.RuntimeBytecodeParser) b).getCallTreeNode();
-                GraalFeature.CallTreeNode calleeNode = new GraalFeature.CallTreeNode(targetMethod, targetMethod, callerNode, callerNode.getLevel() + 1,
-                                GraalFeature.buildSourceReference(neverPartOfCompilation.stateAfter()));
-                neverPartOfCompilationViolations.add(calleeNode);
+                LinkedList<String> callTree = new LinkedList<>();
+                FrameState cur = neverPartOfCompilation.stateAfter();
+                while (cur != null) {
+                    callTree.add(cur.getMethod().format("%H.%n(%p)"));
+                    cur = cur.outerFrameState();
+                }
+                callTree.removeLast(); // this method will be b.getMethod
+                neverPartOfCompilationViolations.add(Pair.create(b.getMethod(), String.join(",", callTree)));
             }
         }
 
@@ -286,21 +339,22 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
     @Override
     public void beforeAnalysis(BeforeAnalysisAccess access) {
         SubstrateTruffleRuntime truffleRuntime = (SubstrateTruffleRuntime) Truffle.getRuntime();
-        FeatureImpl.BeforeAnalysisAccessImpl config = (FeatureImpl.BeforeAnalysisAccessImpl) access;
+        BeforeAnalysisAccessImpl config = (BeforeAnalysisAccessImpl) access;
 
         ImageSingletons.lookup(TruffleBaseFeature.class).setProfilingEnabled(truffleRuntime.isProfilingEnabled());
 
         for (Class<?> initType : truffleRuntime.getLookupTypes()) {
-            access.registerAsUsed(initType);
+            config.registerAsUsed(initType, "Truffle runtime init type.");
         }
 
         // register thread local foreign poll as compiled otherwise the stub won't work
-        config.registerAsCompiled((AnalysisMethod) SubstrateThreadLocalHandshake.FOREIGN_POLL.findMethod(config.getMetaAccess()));
+        config.registerAsRoot((AnalysisMethod) SubstrateThreadLocalHandshake.FOREIGN_POLL.findMethod(config.getMetaAccess()), true);
 
-        GraalFeature graalFeature = ImageSingletons.lookup(GraalFeature.class);
-        SnippetReflectionProvider snippetReflection = graalFeature.getHostedProviders().getSnippetReflection();
+        RuntimeCompilationFeature runtimeCompilationFeature = RuntimeCompilationFeature.singleton();
+        SnippetReflectionProvider snippetReflection = runtimeCompilationFeature.getHostedProviders().getSnippetReflection();
         SubstrateTruffleCompiler truffleCompiler = truffleRuntime.initTruffleCompiler();
-        truffleRuntime.lookupCallMethods(config.getMetaAccess());
+        truffleRuntime.initializeKnownMethods(config.getMetaAccess());
+        truffleRuntime.initializeHostedKnownMethods(config.getUniverse().getOriginalMetaAccess());
 
         PartialEvaluator partialEvaluator = truffleCompiler.getPartialEvaluator();
         registerKnownTruffleFields(config, partialEvaluator.getKnownTruffleTypes());
@@ -308,11 +362,11 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
 
         GraphBuilderConfiguration graphBuilderConfig = partialEvaluator.getConfigPrototype();
 
-        if (Options.TruffleInlineDuringParsing.getValue()) {
+        if (Options.TruffleInlineDuringParsing.getValue() && !SubstrateOptions.parseOnce()) {
             graphBuilderConfig.getPlugins().appendInlineInvokePlugin(
-                            new TruffleParsingInlineInvokePlugin(config.getHostVM(), graalFeature.getHostedProviders().getReplacements(),
+                            new TruffleParsingInlineInvokePlugin(config.getHostVM(), runtimeCompilationFeature.getHostedProviders().getReplacements(),
                                             graphBuilderConfig.getPlugins().getInvocationPlugins(),
-                                            partialEvaluator, method -> includeCallee(method, null, null)));
+                                            partialEvaluator, this::allowRuntimeCompilation));
         }
 
         registerNeverPartOfCompilation(graphBuilderConfig.getPlugins().getInvocationPlugins());
@@ -329,15 +383,15 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
                         peProviders.getReplacements(),
                         peProviders.getStampProvider(),
                         snippetReflection,
-                        graalFeature.getHostedProviders().getWordTypes(),
-                        graalFeature.getHostedProviders().getPlatformConfigurationProvider(),
-                        graalFeature.getHostedProviders().getMetaAccessExtensionProvider(),
-                        graalFeature.getHostedProviders().getLoopsDataProvider());
+                        runtimeCompilationFeature.getHostedProviders().getWordTypes(),
+                        runtimeCompilationFeature.getHostedProviders().getPlatformConfigurationProvider(),
+                        runtimeCompilationFeature.getHostedProviders().getMetaAccessExtensionProvider(),
+                        runtimeCompilationFeature.getHostedProviders().getLoopsDataProvider());
         newHostedProviders.setGraphBuilderPlugins(graphBuilderConfig.getPlugins());
 
-        graalFeature.initializeRuntimeCompilationConfiguration(newHostedProviders, graphBuilderConfig, this::includeCallee, this::deoptimizeOnException);
+        runtimeCompilationFeature.initializeRuntimeCompilationConfiguration(newHostedProviders, graphBuilderConfig, this::allowRuntimeCompilation, this::deoptimizeOnException);
         for (ResolvedJavaMethod method : partialEvaluator.getCompilationRootMethods()) {
-            graalFeature.prepareMethodForRuntimeCompilation(method, config);
+            runtimeCompilationFeature.prepareMethodForRuntimeCompilation(method, config);
         }
 
         initializeMethodBlocklist(config.getMetaAccess(), access);
@@ -347,14 +401,22 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
          * information available, otherwise SubstrateStackIntrospection cannot visit them.
          */
         for (ResolvedJavaMethod method : truffleRuntime.getAnyFrameMethod()) {
-            graalFeature.requireFrameInformationForMethod(method);
+            runtimeCompilationFeature.requireFrameInformationForMethod(method);
             /*
              * To avoid corner case errors, we also force compilation of these methods. This only
              * affects builds where no Truffle language is included, because any real language makes
              * these methods reachable (and therefore compiled).
              */
-            config.registerAsCompiled((AnalysisMethod) method);
+            config.registerAsRoot((AnalysisMethod) method, true);
         }
+
+        /*
+         * The concrete subclass of OptimizedCallTarget needs to be registered as in heap for the
+         * forced compilation of frame methods to work. Forcing compilation of a method effectively
+         * adds it as a root and non-static root methods are only compiled if types implementing
+         * them or any of their subtypes are allocated.
+         */
+        config.registerAsInHeap(TruffleSupport.singleton().getOptimizedCallTargetClass(), "Concrete subclass of OptimizedCallTarget registered by TruffleFeature.");
 
         /*
          * This effectively initializes the Truffle fallback engine which does all the system
@@ -363,6 +425,26 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
          * don't expect it to be used except for profiling enabled check.
          */
         TruffleBaseFeature.invokeStaticMethod("com.oracle.truffle.polyglot.PolyglotEngineImpl", "resetFallbackEngine", Collections.emptyList());
+        TruffleBaseFeature.preInitializeEngine();
+
+        /* Ensure org.graalvm.polyglot.io.IOHelper.IMPL is initialized. */
+        ((BeforeAnalysisAccessImpl) access).ensureInitialized("org.graalvm.polyglot.io.IOHelper");
+
+        /* Support for deprecated bytecode osr frame transfer: GR-38296 */
+        config.registerSubtypeReachabilityHandler((acc, klass) -> {
+            DuringAnalysisAccessImpl impl = (DuringAnalysisAccessImpl) acc;
+            /* Pass known reachable classes to the initializer: it will decide there what to do. */
+            Boolean modified = TruffleBaseFeature.invokeStaticMethod(
+                            "org.graalvm.compiler.truffle.runtime.BytecodeOSRRootNode",
+                            "initializeClassUsingDeprecatedFrameTransfer",
+                            Collections.singleton(Class.class),
+                            klass);
+            if (modified != null && modified) {
+                if (!impl.concurrentReachabilityHandlers()) {
+                    impl.requireAnalysisIteration();
+                }
+            }
+        }, BytecodeOSRNode.class);
     }
 
     static class TruffleParsingInlineInvokePlugin implements InlineInvokePlugin {
@@ -371,22 +453,24 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         private final Replacements replacements;
         private final InvocationPlugins invocationPlugins;
         private final PartialEvaluator partialEvaluator;
-        private final Predicate<ResolvedJavaMethod> includeMethodPredicate;
+        private final Predicate<ResolvedJavaMethod> allowRuntimeCompilationPredicate;
 
         TruffleParsingInlineInvokePlugin(SVMHost hostVM, Replacements replacements, InvocationPlugins invocationPlugins, PartialEvaluator partialEvaluator,
-                        Predicate<ResolvedJavaMethod> includeMethodPredicate) {
+                        Predicate<ResolvedJavaMethod> allowRuntimeCompilationPredicate) {
             this.hostVM = hostVM;
             this.replacements = replacements;
             this.invocationPlugins = invocationPlugins;
             this.partialEvaluator = partialEvaluator;
-            this.includeMethodPredicate = includeMethodPredicate;
+            this.allowRuntimeCompilationPredicate = allowRuntimeCompilationPredicate;
         }
 
         @Override
         public InlineInfo shouldInlineInvoke(GraphBuilderContext builder, ResolvedJavaMethod original, ValueNode[] arguments) {
+            assert !SubstrateOptions.parseOnce() : "inlining during parsing is not enabled with parse once";
+
             if (original.hasNeverInlineDirective()) {
                 return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
-            } else if (invocationPlugins.lookupInvocation(original) != null) {
+            } else if (invocationPlugins.lookupInvocation(original, builder.getOptions()) != null) {
                 return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
             } else if (original.getAnnotation(ExplodeLoop.class) != null) {
                 /*
@@ -400,7 +484,7 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
                  * loops of the inlined callee are exploded too.
                  */
                 return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
-            } else if (replacements.hasSubstitution(original)) {
+            } else if (replacements.hasSubstitution(original, builder.getOptions())) {
                 return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
             }
 
@@ -410,7 +494,7 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
                 }
             }
 
-            if (original.getCode() != null && includeMethodPredicate.test(original) && hostVM.isAnalysisTrivialMethod((AnalysisMethod) original) &&
+            if (original.getCode() != null && allowRuntimeCompilationPredicate.test(original) && hostVM.isAnalysisTrivialMethod((AnalysisMethod) original) &&
                             builder.getDepth() < InlineDuringParsingMaxDepth.getValue(HostedOptionValues.singleton())) {
                 return createStandardInlineInfo(original);
             }
@@ -419,14 +503,14 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         }
     }
 
-    private static void registerKnownTruffleFields(FeatureImpl.BeforeAnalysisAccessImpl config, KnownTruffleTypes knownTruffleFields) {
+    private static void registerKnownTruffleFields(BeforeAnalysisAccessImpl config, KnownTruffleTypes knownTruffleFields) {
         for (Class<?> klass = knownTruffleFields.getClass(); klass != Object.class; klass = klass.getSuperclass()) {
             for (Field field : klass.getDeclaredFields()) {
                 if (Modifier.isPublic(field.getModifiers())) {
                     try {
                         Object value = field.get(knownTruffleFields);
                         if (value instanceof ResolvedJavaField) {
-                            config.registerAsAccessed((AnalysisField) value);
+                            config.registerAsAccessed((AnalysisField) value, "known truffle field");
                         }
                     } catch (IllegalAccessException ex) {
                         throw VMError.shouldNotReachHere(ex);
@@ -436,55 +520,45 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         }
     }
 
-    private boolean includeCallee(GraalFeature.CallTreeNode calleeNode, List<AnalysisMethod> implementationMethods) {
-        return includeCallee(calleeNode.getImplementationMethod(), calleeNode, implementationMethods);
-    }
-
-    private boolean includeCallee(ResolvedJavaMethod implementationMethod, GraalFeature.CallTreeNode calleeNode, List<AnalysisMethod> implementationMethods) {
-        Uninterruptible uninterruptibleAnnotation = implementationMethod.getAnnotation(Uninterruptible.class);
-        if (implementationMethod.getAnnotation(CompilerDirectives.TruffleBoundary.class) != null) {
+    private boolean allowRuntimeCompilation(ResolvedJavaMethod method) {
+        if (runtimeCompilationForbidden(method)) {
             return false;
-        } else if (implementationMethod.hasNeverInlineDirective()) {
-            /* Ensure that NeverInline methods are also never inlined during Truffle compilation. */
+        } else if (isBlocklisted(method)) {
             return false;
-        } else if (Uninterruptible.Utils.isUninterruptible(implementationMethod) && (uninterruptibleAnnotation == null || !uninterruptibleAnnotation.mayBeInlined())) {
-            /* The semantics of Uninterruptible would get lost during partial evaluation. */
-            return false;
-        } else if (implementationMethod.getAnnotation(TruffleCallBoundary.class) != null) {
-            return false;
-        } else if (calleeNode != null && implementationMethods.size() > 4 && isBlocklisted(calleeNode.getTargetMethod())) {
-            blocklistViolations.add(new GraalFeature.CallTreeNode(calleeNode.getTargetMethod(), calleeNode.getTargetMethod(), calleeNode.getParent(), calleeNode.getLevel(),
-                            calleeNode.getSourceReference()));
-            return false;
-        } else if (isBlocklisted(implementationMethod)) {
-            if (calleeNode != null) {
-                blocklistViolations.add(calleeNode);
-            }
-            return false;
-
-        } else if (warnMethods.contains(implementationMethod)) {
-            if (calleeNode != null) {
-                warnViolations.add(calleeNode);
-            }
+        } else if (warnMethods.contains(method)) {
+            warnViolations.add(method);
         }
 
         return true;
     }
 
-    private boolean isBlocklisted(ResolvedJavaMethod method) {
+    private static boolean runtimeCompilationForbidden(ResolvedJavaMethod method) {
+        if (method.getAnnotation(CompilerDirectives.TruffleBoundary.class) != null) {
+            return true;
+        } else if (!((SubstrateTruffleRuntime) Truffle.getRuntime()).isInlineable(method)) {
+            return true;
+        } else if (method.getAnnotation(TruffleCallBoundary.class) != null) {
+            return true;
+        }
+        return false;
+    }
+
+    boolean isBlocklisted(ResolvedJavaMethod method) {
         if (!((AnalysisMethod) method).allowRuntimeCompilation()) {
             return true;
         }
 
-        if (method.isSynchronized() && method.getName().equals("fillInStackTrace")) {
-            /*
-             * We do not want anything related to Throwable.fillInStackTrace in the image. For
-             * simplicity, we just check the method name and not the declaring class too, but it is
-             * unlikely that some non-exception method is called "fillInStackTrace".
-             */
-            return true;
-        }
         return blocklistMethods.contains(method);
+    }
+
+    boolean isTargetBlocklisted(ResolvedJavaMethod target, ResolvedJavaMethod implementation) {
+        boolean blocklisted = !((AnalysisMethod) target).allowRuntimeCompilation() || blocklistMethods.contains(target);
+
+        if (blocklisted && implementation != target && implementationOnlyBlocklist.contains(target)) {
+            blocklisted = isBlocklisted(implementation);
+        }
+
+        return blocklisted;
     }
 
     @SuppressWarnings("deprecation")
@@ -497,12 +571,18 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
     }
 
     private void initializeMethodBlocklist(MetaAccessProvider metaAccess, FeatureAccess featureAccess) {
-        blocklistMethod(metaAccess, Object.class, "clone");
         blocklistMethod(metaAccess, Object.class, "equals", Object.class);
         blocklistMethod(metaAccess, Object.class, "hashCode");
         blocklistMethod(metaAccess, Object.class, "toString");
         blocklistMethod(metaAccess, String.class, "valueOf", Object.class);
         blocklistMethod(metaAccess, String.class, "getBytes");
+        blocklistMethod(metaAccess, String.class, "indexOf", int.class);
+        blocklistMethod(metaAccess, String.class, "indexOf", int.class, int.class);
+        blocklistMethod(metaAccess, String.class, "indexOf", String.class);
+        blocklistMethod(metaAccess, String.class, "indexOf", String.class, int.class);
+        blocklistMethod(metaAccess, Throwable.class, "fillInStackTrace");
+        // Implementations which don't call Throwable.fillInStackTrace are allowed
+        implementationOnlyBlocklist(metaAccess, Throwable.class, "fillInStackTrace");
         blocklistMethod(metaAccess, Throwable.class, "initCause", Throwable.class);
         blocklistMethod(metaAccess, Throwable.class, "addSuppressed", Throwable.class);
         blocklistMethod(metaAccess, System.class, "getProperty", String.class);
@@ -527,11 +607,11 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         blocklistAllMethods(metaAccess, ListIterator.class);
         blocklistAllMethods(metaAccess, ReentrantLock.class);
 
-        allowlistMethod(metaAccess, BigInteger.class, "signum");
-        allowlistMethod(metaAccess, ReentrantLock.class, "isLocked");
-        allowlistMethod(metaAccess, ReentrantLock.class, "isHeldByCurrentThread");
-        allowlistMethod(metaAccess, ReentrantLock.class, "getOwner");
-        allowlistMethod(metaAccess, ReentrantLock.class, "<init>");
+        removeFromBlocklist(metaAccess, BigInteger.class, "signum");
+        removeFromBlocklist(metaAccess, ReentrantLock.class, "isLocked");
+        removeFromBlocklist(metaAccess, ReentrantLock.class, "isHeldByCurrentThread");
+        removeFromBlocklist(metaAccess, ReentrantLock.class, "getOwner");
+        removeFromBlocklist(metaAccess, ReentrantLock.class, "<init>");
 
         /* Methods with synchronization are currently not supported as deoptimization targets. */
         blocklistAllMethods(metaAccess, StringBuffer.class);
@@ -582,11 +662,8 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         blocklistAllMethods(metaAccess, ToLongBiFunction.class);
         blocklistAllMethods(metaAccess, ToLongFunction.class);
         blocklistAllMethods(metaAccess, UnaryOperator.class);
-
         /* Block list string concatenation. */
-        if (JavaVersionUtil.JAVA_SPEC >= 11) {
-            blocklistAllMethods(metaAccess, featureAccess.findClassByName("java.lang.StringConcatHelper"));
-        }
+        blocklistAllMethods(metaAccess, featureAccess.findClassByName("java.lang.StringConcatHelper"));
 
         /*
          * Core Substrate VM classes that very certainly should not be reachable for runtime
@@ -595,6 +672,31 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         warnAllMethods(metaAccess, JavaStackWalker.class);
         warnAllMethods(metaAccess, Deoptimizer.class);
         warnAllMethods(metaAccess, Heap.getHeap().getClass());
+
+        /*
+         * GR-41564 These methods should become part of the blocklist once the Truffle language
+         * implementations are refactored.
+         */
+        tempTargetAllowlistMethod(metaAccess, Function.class, "apply", Object.class);
+        tempTargetAllowlistMethod(metaAccess, Predicate.class, "test", Object.class);
+        tempTargetAllowlistMethod(metaAccess, LongBinaryOperator.class, "applyAsLong", long.class, long.class);
+        tempTargetAllowlistMethod(metaAccess, IntBinaryOperator.class, "applyAsInt", int.class, int.class);
+        tempTargetAllowlistMethod(metaAccess, IntBinaryOperator.class, "applyAsInt", int.class, int.class);
+
+        tempTargetAllowlistMethod(metaAccess, List.class, "size");
+        tempTargetAllowlistMethod(metaAccess, List.class, "isEmpty");
+        tempTargetAllowlistMethod(metaAccess, List.class, "clear");
+        tempTargetAllowlistMethod(metaAccess, List.class, "get", int.class);
+        tempTargetAllowlistMethod(metaAccess, List.class, "remove", int.class);
+        tempTargetAllowlistMethod(metaAccess, List.class, "toArray", Object[].class);
+
+        tempTargetAllowlistMethod(metaAccess, Iterator.class, "next");
+        tempTargetAllowlistMethod(metaAccess, Iterator.class, "hasNext");
+
+        tempTargetAllowlistMethod(metaAccess, Iterable.class, "iterator");
+
+        tempTargetAllowlistMethod(metaAccess, Object.class, "equals", Object.class);
+        tempTargetAllowlistMethod(metaAccess, Object.class, "hashCode");
     }
 
     private void blocklistAllMethods(MetaAccessProvider metaAccess, Class<?> clazz) {
@@ -614,10 +716,18 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         }
     }
 
+    private void tempTargetAllowlistMethod(MetaAccessProvider metaAccess, Class<?> clazz, String name, Class<?>... parameterTypes) {
+        try {
+            tempTargetAllowlistMethods.add(metaAccess.lookupJavaMethod(clazz.getDeclaredMethod(name, parameterTypes)));
+        } catch (NoSuchMethodException ex) {
+            throw VMError.shouldNotReachHere(ex);
+        }
+    }
+
     /**
      * Removes a previously blocklisted method from the blocklist.
      */
-    private void allowlistMethod(MetaAccessProvider metaAccess, Class<?> clazz, String name, Class<?>... parameterTypes) {
+    private void removeFromBlocklist(MetaAccessProvider metaAccess, Class<?> clazz, String name, Class<?>... parameterTypes) {
         try {
             Executable method;
             if ("<init>".equals(name)) {
@@ -633,6 +743,24 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         }
     }
 
+    /**
+     * Methods on this list are allowed to be runtime compiled as long as the method being runtime
+     * compiled (i.e., the implementation method & not the target) is not on blocklist.
+     */
+    private void implementationOnlyBlocklist(MetaAccessProvider metaAccess, Class<?> clazz, String name, Class<?>... parameterTypes) {
+        try {
+            Executable method;
+            if ("<init>".equals(name)) {
+                method = clazz.getDeclaredConstructor(parameterTypes);
+            } else {
+                method = clazz.getDeclaredMethod(name, parameterTypes);
+            }
+            implementationOnlyBlocklist.add(metaAccess.lookupJavaMethod(method));
+        } catch (NoSuchMethodException ex) {
+            throw VMError.shouldNotReachHere(ex);
+        }
+    }
+
     private void warnAllMethods(MetaAccessProvider metaAccess, Class<?> clazz) {
         for (Executable m : clazz.getDeclaredMethods()) {
             /*
@@ -640,21 +768,30 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
              * all methods in the warning list, just enough to trigger the warnings. Accessors are
              * generally allowed too.
              */
-            if (m.getAnnotations().length == 0 && !m.getName().startsWith("get") && !m.getName().startsWith("set")) {
+            if (AnnotationAccess.getAnnotationTypes(m).length == 0 && !m.getName().startsWith("get") && !m.getName().startsWith("set")) {
                 warnMethods.add(metaAccess.lookupJavaMethod(m));
             }
         }
         for (Executable m : clazz.getDeclaredConstructors()) {
-            if (m.getAnnotations().length == 0) {
+            if (AnnotationAccess.getAnnotationTypes(m).length == 0) {
                 warnMethods.add(metaAccess.lookupJavaMethod(m));
             }
         }
     }
 
-    private static int blocklistViolationComparator(GraalFeature.CallTreeNode n1, GraalFeature.CallTreeNode n2) {
-        int result = n1.getTargetMethod().getQualifiedName().compareTo(n2.getTargetMethod().getQualifiedName());
+    private static int blocklistViolationComparator(AbstractCallTreeNode n1, AbstractCallTreeNode n2) {
+        int result = n1.getImplementationMethod().getQualifiedName().compareTo(n2.getImplementationMethod().getQualifiedName());
+        if (result == 0) {
+            result = n1.getTargetMethod().getQualifiedName().compareTo(n2.getTargetMethod().getQualifiedName());
+        }
         if (result == 0) {
             result = n1.getSourceReference().compareTo(n2.getSourceReference());
+        }
+        if (result == 0) {
+            if (n1.getParent() == null || n2.getParent() == null) {
+                return Boolean.compare(n1.getParent() == null, n2.getParent() == null);
+            }
+            result = blocklistViolationComparator(n1.getParent(), n2.getParent());
         }
         return result;
     }
@@ -664,21 +801,38 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         FeatureImpl.BeforeCompilationAccessImpl access = (FeatureImpl.BeforeCompilationAccessImpl) config;
 
         boolean failBlockListViolations = Options.TruffleCheckBlockListMethods.getValue() || Options.TruffleCheckBlackListedMethods.getValue();
-        boolean printBlockListViolations = GraalFeature.Options.PrintRuntimeCompileMethods.getValue() || failBlockListViolations;
-        if (printBlockListViolations && blocklistViolations.size() > 0) {
-            System.out.println();
-            System.out.println("=== Found " + blocklistViolations.size() + " compilation blocklist violations ===");
-            System.out.println();
-            for (GraalFeature.CallTreeNode node : blocklistViolations) {
-                System.out.println("Blocklisted method");
-                System.out.println(node.getImplementationMethod().format("  %H.%n(%p)"));
-                System.out.println("called from");
-                for (GraalFeature.CallTreeNode cur = node; cur != null; cur = cur.getParent()) {
-                    System.out.println("  " + cur.getSourceReference());
+        boolean printBlockListViolations = RuntimeCompilationFeature.Options.PrintRuntimeCompileMethods.getValue() || failBlockListViolations;
+        if (printBlockListViolations) {
+            Set<AbstractCallTreeNode> blocklistViolations = new TreeSet<>(TruffleFeature::blocklistViolationComparator);
+            for (AbstractCallTreeNode node : RuntimeCompilationFeature.singleton().getAllRuntimeCompilationCandidates()) {
+
+                // Determine blocklist violations
+                if (!runtimeCompilationForbidden(node.getImplementationMethod())) {
+                    if (isBlocklisted(node.getImplementationMethod()) || isTargetBlocklisted(node.getTargetMethod(), node.getImplementationMethod())) {
+                        boolean tempAllow = !node.getTargetMethod().equals(node.getImplementationMethod()) &&
+                                        tempTargetAllowlistMethods.contains(node.getTargetMethod()) &&
+                                        !isBlocklisted(node.getImplementationMethod());
+                        if (!tempAllow) {
+                            blocklistViolations.add(node);
+                        }
+                    }
                 }
             }
-            if (failBlockListViolations) {
-                throw VMError.shouldNotReachHere("Blocklisted methods are reachable for runtime compilation");
+            if (!blocklistViolations.isEmpty()) {
+                System.out.println();
+                System.out.println("=== Found " + blocklistViolations.size() + " compilation blocklist violations ===");
+                System.out.println();
+                for (AbstractCallTreeNode node : blocklistViolations) {
+                    System.out.println("Blocklisted method");
+                    System.out.format("   %s (target: %s)\n", node.getImplementationMethod().format("%H.%n(%p)"), node.getTargetMethod().format("%H.%n(%p)"));
+                    System.out.println("called from");
+                    for (AbstractCallTreeNode cur = node; cur != null; cur = cur.getParent()) {
+                        System.out.println("  " + cur.getSourceReference());
+                    }
+                }
+                if (failBlockListViolations) {
+                    throw VMError.shouldNotReachHere("Blocklisted methods are reachable for runtime compilation");
+                }
             }
         }
 
@@ -687,32 +841,24 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
              * It is enough to print one warning message with one stack trace. Take the shortest
              * stack trace.
              */
-            GraalFeature.CallTreeNode printNode = null;
-            int printLength = Integer.MAX_VALUE;
-            for (GraalFeature.CallTreeNode warnNode : warnViolations) {
-                int warnLength = 0;
-                for (GraalFeature.CallTreeNode cur = warnNode; cur != null; cur = cur.getParent()) {
-                    warnLength++;
+            System.out.println("Warning: suspicious methods reachable for runtime compilation.");
+            System.out.println("Check the complete tree of reachable methods using the option " + RuntimeCompilationFeature.Options.PrintRuntimeCompileMethods.getDescriptor().getFieldName());
+            for (ResolvedJavaMethod violation : warnViolations) {
+                System.out.println("Suspicious method: " + violation.format("%H.%n(%p)"));
+                AbstractCallTreeNode node = RuntimeCompilationFeature.singleton().getCallTreeNode(violation);
+                for (AbstractCallTreeNode cur = node; cur != null; cur = cur.getParent()) {
+                    System.out.println("  " + cur.getSourceReference());
                 }
-                if (warnLength < printLength) {
-                    printNode = warnNode;
-                    printLength = warnLength;
-                }
-            }
-
-            System.out.println("Warning: suspicious method reachable for runtime compilation: " + printNode.getImplementationMethod().format("%H.%n(%p)"));
-            System.out.println("Check the complete tree of reachable methods using the option " + GraalFeature.Options.PrintRuntimeCompileMethods.getDescriptor().getFieldName());
-            System.out.println("Suspicious method is called from");
-            for (GraalFeature.CallTreeNode cur = printNode; cur != null; cur = cur.getParent()) {
-                System.out.println("  " + cur.getSourceReference());
             }
         }
 
         if (neverPartOfCompilationViolations.size() > 0) {
             System.out.println("Error: CompilerAsserts.neverPartOfCompilation reachable for runtime compilation from " + neverPartOfCompilationViolations.size() + " places:");
-            for (GraalFeature.CallTreeNode neverPartOfCompilationNode : neverPartOfCompilationViolations) {
+            for (Pair<ResolvedJavaMethod, String> violation : neverPartOfCompilationViolations) {
                 System.out.println("called from");
-                for (GraalFeature.CallTreeNode cur = neverPartOfCompilationNode; cur != null; cur = cur.getParent()) {
+                System.out.println("(inlined call path): " + violation.getRight());
+                AbstractCallTreeNode node = RuntimeCompilationFeature.singleton().getCallTreeNode(violation.getLeft());
+                for (AbstractCallTreeNode cur = node; cur != null; cur = cur.getParent()) {
                     System.out.println("  " + cur.getSourceReference());
                 }
             }
@@ -747,12 +893,100 @@ public class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
         }
     }
 
+    /**
+     * Keep this method in sync with
+     * {@link SubstrateTruffleHostInliningPhase#isTruffleBoundary(ResolvedJavaMethod)}.
+     */
+    private boolean neverInlineTrivial(AnalysisMethod caller, AnalysisMethod callee) {
+        if (runtimeCompiledMethods != null && !runtimeCompiledMethods.contains(caller)) {
+            /*
+             * Make sure we do not make any decisions for non-runtime compiled methods.
+             */
+            return false;
+        } else if (TruffleHostInliningPhase.shouldDenyTrivialInlining(callee)) {
+            return true;
+        }
+        return false;
+    }
+
     private static void collectImplementations(HostedType type, Set<HostedType> implementations) {
         for (HostedType subType : type.getSubTypes()) {
             if (!subType.isAbstract()) {
                 implementations.add(subType);
             }
             collectImplementations(subType, implementations);
+        }
+    }
+
+    @Override
+    public void afterAnalysis(AfterAnalysisAccess access) {
+        if (Options.PrintStaticTruffleBoundaries.getValue()) {
+            printStaticTruffleBoundaries();
+        }
+
+        SubstrateTruffleRuntime truffleRuntime = (SubstrateTruffleRuntime) Truffle.getRuntime();
+        AfterAnalysisAccessImpl config = (AfterAnalysisAccessImpl) access;
+        truffleRuntime.initializeHostedKnownMethods(config.getMetaAccess());
+
+        runtimeCompiledMethods = new LinkedHashSet<>();
+        runtimeCompiledMethods.addAll(Arrays.asList(config.getMetaAccess().lookupJavaType(CompilerDirectives.class).getDeclaredMethods()));
+        runtimeCompiledMethods.addAll(Arrays.asList(config.getMetaAccess().lookupJavaType(CompilerAsserts.class).getDeclaredMethods()));
+
+        for (AbstractCallTreeNode runtimeCompiledMethod : RuntimeCompilationFeature.singleton().getRuntimeCompiledMethods().values()) {
+
+            runtimeCompiledMethods.add(runtimeCompiledMethod.getImplementationMethod());
+
+            /*
+             * The list of runtime compiled methods is not containing all methods that are always
+             * inlined for runtime compilation. See for example {@link
+             * TruffleParsingInlineInvokePlugin}, which always inlines certain methods to improve
+             * footprint. Luckily the Graal graph keeps track of all methods ever inlined in a
+             * graph. So we just need to remember them. The set of runtime compiled methods is later
+             * used for driving the entry points of the TruffleHostInliningPhase.
+             */
+            StructuredGraph graph = runtimeCompiledMethod.getGraph();
+            if (graph != null) {
+                for (ResolvedJavaMethod method : graph.getMethods()) {
+                    if (!(method instanceof AnalysisMethod)) {
+                        throw VMError.shouldNotReachHere("method should be an analysis method");
+                    }
+                    if (method.getAnnotation(TruffleBoundary.class) != null) {
+                        throw VMError.shouldNotReachHere("method used during runtime compilation must never be annotated with a truffle boundary");
+                    }
+                    runtimeCompiledMethods.add((AnalysisMethod) method);
+                }
+            }
+        }
+    }
+
+    private static void printStaticTruffleBoundaries() {
+        HashSet<ResolvedJavaMethod> foundBoundaries = new HashSet<>();
+        int callSiteCount = 0;
+        int calleeCount = 0;
+        for (AbstractCallTreeNode node : RuntimeCompilationFeature.singleton().getRuntimeCompiledMethods().values()) {
+            StructuredGraph graph = node.getGraph();
+            for (MethodCallTargetNode callTarget : graph.getNodes(MethodCallTargetNode.TYPE)) {
+                ResolvedJavaMethod targetMethod = callTarget.targetMethod();
+                TruffleBoundary truffleBoundary = targetMethod.getAnnotation(TruffleBoundary.class);
+                if (truffleBoundary != null) {
+                    ++callSiteCount;
+                    if (foundBoundaries.contains(targetMethod)) {
+                        // nothing to do
+                    } else {
+                        foundBoundaries.add(targetMethod);
+                        System.out.println("Truffle boundary found: " + targetMethod);
+                        calleeCount++;
+                    }
+                }
+            }
+        }
+        System.out.printf("Number of Truffle call boundaries: %d, number of unique called methods outside the boundary: %d%n", callSiteCount, calleeCount);
+    }
+
+    @Override
+    public void registerGraalPhases(Providers providers, SnippetReflectionProvider snippetReflection, Suites suites, boolean hosted) {
+        if (hosted && TruffleHostInliningPhase.Options.TruffleHostInlining.getValue(HostedOptionValues.singleton()) && suites.getHighTier() instanceof HighTier) {
+            suites.getHighTier().prependPhase(new SubstrateTruffleHostInliningPhase(CanonicalizerPhase.create()));
         }
     }
 }
